Save/Update files [ci skip]

--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -254,7 +254,7 @@
  siamese_rev.10.t:0 "[From.GetName]での好機"
  siamese_rev.10.d:0 "[From.GetName]で活動する探検隊によって、彼らの守りには戦術的な、そして政治的な弱点があることが明らかになりました。その弱点とは、潜在している奇襲攻撃に対して脆いことです。自国の諜報員や将校たちは、もし今すぐ攻撃を仕掛ければ、[From.GetAdjective]は我が支配に屈服するほかないだろうと断言しています。"
  siam_rev.10.a:0 "好機は準備を怠った人を置いていくものですよ。"
- arrest_phetracha_decision_title:0 "ペートラーチャー逮捕"
+ arrest_phetracha_decision_title:0 "ペートラーチャーの逮捕"
  arrest_phetracha_decision_desc:0 "Phetrachaは国家にとって危険物であり、我々のためにも逮捕しておくべきだろう。"
  phetracha_coup_decision_title:0 "ペートラーチャーの支援"
  phetracha_coup_decision_desc:0 "ペートラーチャーは正義の士である。どんな対価を払うことになろうが、彼の大義を支援せねばならない。"
@@ -631,7 +631,7 @@
  burghers_estate_events.17.1.t:0 "熱帯都市計画"
  burghers_estate_events.17.1.d:0 "自国が成長を遂げ、熱帯の州が新しく自領に加わりました。[Root.TAG.GetName]の$ESTATE_BURGHERS$たちは、彼らの技術によって大きく強力に成長できるようになったため、これらの新しい場所の計画を開始しました。"
  burghers_estate_events.17.1.a:0 "了解。"
- renovate_emerald_buddha_shrine_alternate_title:0 "エメラルド仏の神殿の改修（§Yカルマ -§!）"
+ renovate_emerald_buddha_shrine_alternate_title:0 "エメラルド仏の寺院の改修（§Yカルマ -§!）"
  renovate_emerald_buddha_shrine_alternate_desc:1 "神聖なエメラルド仏を祀る神殿は、素材としての保守のためだけでなく、現在の国家にとって有用な仏教の側面を強調するためにも、改修を要している。"
  siamese_revolution_event_tt:0 "ヨーロッパの商人たちと接触した。"
  siamese_revolution_tt:0 "§Yヨーロッパ§!諸国であり、§Y東インド諸島§!亜大陸内の任意の州を領有している"
