--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -1791,7 +1791,7 @@
  north_florida_area_name:0 "ティムクア"
  north_florida_area_adj:0 "ティムクア"
  florida_area:0 "フロリダ"
- florida_area_name:1 "テケスタ"
+ florida_area_name:1 "テヘスタ"
  florida_area_adj:1 "テケスタ"
  south_appalachia_area:1 "オーバーマウンテン"
  south_appalachia_area_name:1 "アニユンヤ"
