--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -362,10 +362,10 @@
  LEDGER_TRADING_BONUS:0 "交易ボーナス"
  CLAIMS:0 "中核州と請求権"
  ABANDON_CORE_COST:0 "中核州を放棄すると、対象国との関係が回復する可能性があります。これには§R$COST$§!威信を消費します。"
- ABANDON_CORE_TITLE:0 "中核州を放棄"
+ ABANDON_CORE_TITLE:0 "中核州の放棄"
  RETURN_PROVINCE_DESC_1:0 "§Y$PROV$§!を§Y$COUNTRY$§!に返還すれば、彼らのあなたに対する評価は$AMT$改善します。"
  RETURN_PROVINCE_DESC_2:0 "威信§R$COST$§!を消費します。"
- RETURN_PROVINCE_TITLE:0 "州を返還する"
+ RETURN_PROVINCE_TITLE:0 "州の返還"
  ABANDON_CORE_OWNER:0 "あなたが所有者である州の中核は放棄することはできません。"
  CONSTRUCTION_QUEUE:0 "待機列"
  CONSTRUCTION_QUEUE_NONE:0 "なし。"
@@ -542,7 +542,7 @@
  MENU_BAR_DELETE_ALL:0 "全てを削除"
  CONFIRMDELETETITLE:0 "ファイルを削除"
  CONFIRMDELETETEXT:0 "本当にセーブデータを削除しますか？"
- CONFIRM_DELETE_ALL_TITLE:0 "全てのファイルを削除"
+ CONFIRM_DELETE_ALL_TITLE:0 "全ファイル削除"
  CONFIRM_DELETE_ALL_TEXT:0 "このディレクトリ内の全てのセーブデータを削除します。この操作は取り消せません。"
  MENU_BAR_DISK_QUOTA:0 "$TOTAL$中、$AVAIL$利用可能"
  FE_CONTENT:0 "コンテンツ"
@@ -555,7 +555,7 @@
  HRE_OTHER_VOTE_SELF:0 "§Y$ELECTOR$§Wの選帝侯は、皇位に座するため自国を支持しています。"
  CURRENTLY_VOTING_FOR_SELF:0 "我が国は現在、自国に投票しています。"
  HRE_RELATION_SELF:0 "我々は次期皇帝として投票したい者へ順位付けをするときに、自分自身に§Y$POINTS$§W与える。"
- DLC_NEWITEMINSTALLED_TITLE:0 "新しい項目がインストールされました。"
+ DLC_NEWITEMINSTALLED_TITLE:0 "新しいアイテムがインストールされました。"
  DLC_NEWITEMINSTALLED_DESC:0 "$NAME$がインストールされています。EU4の再起動が必要です。"
  DLC_AVAILABLE_TITLE:0 "利用可能なコンテンツ"
  DLC_AVAILABLE_DESC:0 "あなたの注目を待っている§Y$NUM$§!の利用可能なDLCがあります。"
@@ -863,7 +863,7 @@
  RANDOM_WORLD_GENERATE_WORLD_SEA2:0 "ランダムな新世界を生成中…\nさらに海洋州を生成中…"
  RANDOM_WORLD_GENERATE_WORLD_SEA3:0 "ランダムな新世界を生成中…\n穴を埋めています…"
  RANDOM_WORLD_GENERATE_WORLD_SMOOTHING:0 "ランダムな新世界を生成中…\n$PASS$峠を均しています…"
- POLICYVIEW_TITLE:0 "政策を選択"
+ POLICYVIEW_TITLE:0 "政策の選択"
  FERVOR_CHANGE:0 "毎月の変更："
  FERVOR_VALUE2:0 "宗教的情熱ポイント："
  ENFORCE_MILITARY_ACCESS:0 "$FROM$は$TO$に軍事通行権を与えなければなりません。停戦期間が終わるまでこれを取り消すことはできません。"
