--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -61,8 +61,8 @@
  PEACE_DEAL_AFFECTED_SHIELD:0 "講和の対象国を変更します。"
  PEACE_DEAL_SEPARATE_PEACE:0 "単独講和：§R$VALUE$§!"
  in_war_together:0 "同じ戦争"
- transfers_trade_power:0 "以下へ交易力を送出しています"
- getting_trade_power:0 "以下から交易力を得ています"
+ transfers_trade_power:0 "交易力を送出している"
+ getting_trade_power:0 "交易力を得ている"
  broke_transfer_trade_power:0 "交易力の移譲関係を破棄した"
  NOALL_WE_DISLIKE:0 "我々は$WHO$に肯定的な評価を持っている必要があります。現在は$VAL$であるため、彼らと同盟を結ぶことはできません。"
  NOALL_THEY_DISLIKE:0 "$WHO$は我々を良く思っていないため、同盟を結ぶことはできません。彼らは私たちに対して肯定的な評価を持っている必要があります。現在は$VAL$です。"
@@ -719,7 +719,7 @@
  REMOVE_FREECITY_DESC:0 "自由都市の地位を取り消すことにより経済が弱まり、皇帝への貢献度が下がりますが、我々は彼らを攻撃から守る必要がなくなります。"
  GRANTELECTORATETITLE:0 "選帝候任命"
  GRANTELECTORATEDESC:0 "選帝候に任命すると皇帝選挙で投票することができるようになります。"
- REMOVE_ELECTORATE_TITLE:0 "選帝候取り消し"
+ REMOVE_ELECTORATE_TITLE:0 "選帝候位を剥奪する"
  REMOVE_ELECTORATE_DESC:0 "選帝候を取り消すと皇帝選挙で投票ができなくなります。"
  REMOVE_ELECTORATE_ADDITIONAL_EFFECTS:0 "さらに、他の選帝侯の我々への評価は、取り消された選帝侯と同じ宗教であれば$SAME$、それ以外の場合は$OTHER$変更されます。\n\nコストとして我々に§Y$IA$§!の帝国の権威が必要です。"
  OPINION_WOULDCHANGEBY:0 "彼らの評価が$AMOUNT$変化します。"
