--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -924,7 +924,7 @@
  opinion_emperor_imperial_embargo:0 "帝国禁輸令を発布した"
  IMPERIAL_EMBARGO:0 "帝国禁輸令"
  may_join_hansa_tt:0 "§Y新しいハンザ同盟に参加するよう求められるでしょう§!"
- shadow_kingdom_warning_tt:1 "§Y皇帝は、以下の方法によりイタリア諸国を統制することができます。¥n・戦争に勝利する¥n・自由都市にする¥n・同盟を結ぶ¥n・関係度を高くする§!"
+ shadow_kingdom_warning_tt:1 "§Y皇帝は、以下の方法によりイタリア諸国の手綱を握ることができます。戦争に勝利する、自由都市にする、同盟を結ぶ、関係度を上げる。§!"
  shadow_kingdom.2.d:1 "イタリア王国は現在も名目上は帝国の一部だが、帝国の支配は今やあらゆる面で弱まり、「影の王国」となってしまっている。イタリア諸国は今や帝国の意向を無視し、独自行動を始めている。これまで代々の皇帝が行ってきたイタリアを支配しようとする試みが全て失敗に終わったことも、イタリア諸国が帝国の権威を公然と無視するに至ったことの原因だろう。\nイタリア諸国にとって今問題となっているのは、果たしてこれからも皇帝の支配を受け続けるべきなのかということである。"
  shadow_kingdom.2.a:0 "イタリアを放棄しよう。"
  shadow_kingdom.2.b:0 "イタリア支配を回復しなくては。"
