--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -141,7 +141,7 @@
  THEYDECLINESHAREMAP_BTN1:0 "OK"
  THEYDECLINESHAREMAP_BTN2:0 "OK"
  THEYDECLINESHAREMAP_BTN3:0 "移動"
- WESHAREMAP_TITLE:0 "地図を共有"
+ WESHAREMAP_TITLE:0 "地図の共有"
  WESHAREMAP_SETUP:0 "我々の地域の地図を共有したとき"
  WESHAREMAP_HEADER:0 "$MESSENGER$"
  WESHAREMAP_1:0 "地図を共有しました。"
@@ -195,7 +195,7 @@
  TRADELEAGUE_DISBANDED_BTN2:0 "OK"
  TRADELEAGUE_DISBANDED_BTN3:0 "移動"
  TRADELEAGUE_DISBANDED_MAP:0 "新たな貿易同盟の指導国"
- LOST_TRADELEAGUE_LEADER_TITLE:0 "新たな貿易同盟の指導国"
+ LOST_TRADELEAGUE_LEADER_TITLE:0 "貿易同盟の新指導国"
  LOST_TRADELEAGUE_LEADER_SETUP:1 "我々が貿易同盟の指導国でなくなったとき"
  LOST_TRADELEAGUE_LEADER_HEADER:0 "$MESSENGER$"
  LOST_TRADELEAGUE_LEADER_1:0 "指導力を失いました！"
@@ -209,7 +209,7 @@
  LOST_TRADELEAGUE_LEADER_BTN2:0 "いかんな"
  LOST_TRADELEAGUE_LEADER_BTN3:0 "移動"
  LOST_TRADELEAGUE_LEADER_MAP:0 "新たな貿易同盟の指導国"
- NEW_TRADELEAGUE_LEADER_TITLE:0 "新たな貿易同盟の指導国"
+ NEW_TRADELEAGUE_LEADER_TITLE:0 "貿易同盟の新指導国"
  NEW_TRADELEAGUE_LEADER_SETUP:1 "貿易同盟が新たな指導国を得たとき"
  NEW_TRADELEAGUE_LEADER_HEADER:0 "$MESSENGER$"
  NEW_TRADELEAGUE_LEADER_1:0 "新たな貿易同盟の指導国！"
@@ -231,7 +231,7 @@
  LEAVETRADELEAGUE_BTN1:0 "結構"
  LEAVETRADELEAGUE_BTN2:0 "結構"
  LEAVETRADELEAGUE_BTN3:0 "移動"
- WEJOINEDTRADELEAGUE_TITLE:0 "貿易同盟に参加"
+ WEJOINEDTRADELEAGUE_TITLE:0 "貿易同盟への加盟"
  WEJOINEDTRADELEAGUE_SETUP:0 "我が国が貿易同盟に加盟したとき"
  WEJOINEDTRADELEAGUE_HEADER:0 "$MESSENGER$"
  WEJOINEDTRADELEAGUE_1:0 "貿易同盟に加わった"
@@ -253,7 +253,7 @@
  WEJOINEDTRADELEAGUEDECLINE_BTN1:0 "憂慮する！"
  WEJOINEDTRADELEAGUEDECLINE_BTN2:0 "憂慮する！"
  WEJOINEDTRADELEAGUEDECLINE_BTN3:0 "移動"
- OTHERJOINSOURTRADELEAGUE_TITLE:0 "貿易同盟に参加"
+ OTHERJOINSOURTRADELEAGUE_TITLE:0 "貿易同盟への加盟"
  OTHERJOINSOURTRADELEAGUE_SETUP:0 "他国が我々の貿易同盟に加盟したとき"
  OTHERJOINSOURTRADELEAGUE_HEADER:0 "使者"
  OTHERJOINSOURTRADELEAGUE_1:0 "$ACTOR$"
@@ -265,7 +265,7 @@
  OTHERJOINSOURTRADELEAGUE_BTN1:0 "完璧だ！"
  OTHERJOINSOURTRADELEAGUE_BTN2:0 "完璧だ！"
  OTHERJOINSOURTRADELEAGUE_BTN3:0 "移動"
- OTHERJOINSOURTRADELEAGUEDECLINE_TITLE:0 "貿易同盟の辞退"
+ OTHERJOINSOURTRADELEAGUEDECLINE_TITLE:0 "貿易同盟の拒否"
  OTHERJOINSOURTRADELEAGUEDECLINE_SETUP:0 "他国が我々の貿易同盟への招待を拒否したとき"
  OTHERJOINSOURTRADELEAGUEDECLINE_HEADER:0 "使者"
  OTHERJOINSOURTRADELEAGUEDECLINE_1:0 "$ACTOR$"
@@ -275,7 +275,7 @@
  OTHERJOINSOURTRADELEAGUEDECLINE_BTN1:0 "なんてひどい！"
  OTHERJOINSOURTRADELEAGUEDECLINE_BTN2:0 "なんてひどい！"
  OTHERJOINSOURTRADELEAGUEDECLINE_BTN3:0 "移動"
- OTHERJOINSOTHERTRADELEAGUE_TITLE:0 "貿易同盟に参加"
+ OTHERJOINSOTHERTRADELEAGUE_TITLE:0 "貿易同盟への加盟"
  OTHERJOINSOTHERTRADELEAGUE_SETUP:0 "他国が貿易同盟に加盟したとき"
  OTHERJOINSOTHERTRADELEAGUE_HEADER:0 "使者"
  OTHERJOINSOTHERTRADELEAGUE_1:0 "$ACTOR$"
@@ -609,7 +609,7 @@
  REBELS_ENFORCE_BTN1:0 "恐ろしい！"
  REBELS_ENFORCE_BTN2:0 "恐ろしい！"
  REBELS_ENFORCE_BTN3:0 "移動"
- MERCHANT_ARRIVED_TITLE:0 "商人が到着"
+ MERCHANT_ARRIVED_TITLE:0 "商人の到着"
  MERCHANT_ARRIVED_SETUP:0 "交易ノードに商人が到着したとき"
  MERCHANT_ARRIVED_HEADER:0 "宰相からの報告"
  MERCHANT_ARRIVED_1:0 "商人が到着しました"
@@ -621,7 +621,7 @@
  MERCHANT_ARRIVED_BTN1:0 "OK"
  MERCHANT_ARRIVED_BTN2:0 "OK"
  MERCHANT_ARRIVED_BTN3:0 "移動"
- MERCHANT_CANCEL_TITLE:0 "商人をキャンセルしたとき"
+ MERCHANT_CANCEL_TITLE:0 "商人の中断"
  MERCHANT_CANCEL_SETUP:0 "商人が帰還したとき"
  MERCHANT_CANCEL_HEADER:0 "宰相からの報告"
  MERCHANT_CANCEL_1:0 "商人が戻りました。"
@@ -691,7 +691,7 @@
  FUTURECARDINALLOYALTYSTOP_BTN1:0 "OK"
  FUTURECARDINALLOYALTYSTOP_BTN2:0 "OK"
  FUTURECARDINALLOYALTYSTOP_BTN3:0 "移動"
- FREEIDEA_TITLE:0 "アイデアを獲得"
+ FREEIDEA_TITLE:0 "アイデアの解禁"
  FREEIDEA_SETUP:0 "我が国がアイデアグループのアイデアを解禁したとき"
  FREEIDEA_HEADER:0 "$MESSENGER$"
  FREEIDEA_1:0 "$TYPE$の発展！"
@@ -704,7 +704,7 @@
  FREEIDEA_BTN1:0 "OK"
  FREEIDEA_BTN2:0 "OK"
  FREEIDEA_BTN3:0 "詳細"
- IDEA_TITLE:0 "アイデアを獲得"
+ IDEA_TITLE:0 "アイデアの解禁"
  IDEA_SETUP:0 "我が国がアイデアを解禁したとき"
  IDEA_HEADER:0 "$MESSENGER$"
  IDEA_1:0 "$TYPE$の発展！"
@@ -717,7 +717,7 @@
  IDEA_BTN1:0 "OK"
  IDEA_BTN2:0 "OK"
  IDEA_BTN3:0 "詳細"
- IDEAGROUP_TITLE:0 "アイデアグループを獲得"
+ IDEAGROUP_TITLE:0 "アイデアグループの解禁"
  IDEAGROUP_SETUP:0 "我が国が任意のアイデアグループを獲得したとき"
  IDEAGROUP_HEADER:0 "$MESSENGER$"
  IDEAGROUP_1:0 "$TYPE$の発展！"
@@ -726,7 +726,7 @@
  IDEAGROUP_BTN1:0 "OK"
  IDEAGROUP_BTN2:0 "OK"
  IDEAGROUP_BTN3:0 "詳細"
- DIPLOMAT_RETURNED_TITLE:0 "外交官が帰国"
+ DIPLOMAT_RETURNED_TITLE:0 "外交官帰着"
  DIPLOMAT_RETURNED_SETUP:0 "外交官が帰国したとき"
  DIPLOMAT_RETURNED_HEADER:0 "宰相からの報告"
  DIPLOMAT_RETURNED_1:0 "外交官が到着した"
@@ -752,7 +752,7 @@
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
- FLEETBASING_TITLE:0 "港湾使用権を得た"
+ FLEETBASING_TITLE:0 "港湾使用権の獲得"
  FLEETBASING_SETUP:0 "ある国が港湾使用権を付与したとき"
  FLEETBASING_HEADER:0 "使者"
  FLEETBASING_1:0 "$RECIPIENT_COUNTRY$"
@@ -863,7 +863,7 @@
  STOPIMPROVERELATIONS_BTN1:0 "OK"
  STOPIMPROVERELATIONS_BTN2:0 "OK"
  STOPIMPROVERELATIONS_BTN3:0 "移動"
- STOPIMPROVERELATIONSMAXOPINIONUS_TITLE:0 "関係改善を停止"
+ STOPIMPROVERELATIONSMAXOPINIONUS_TITLE:0 "関係改善の停止"
  STOPIMPROVERELATIONSMAXOPINIONUS_SETUP:0 "関係値が最大に達したため、我々が他国との関係改善を止めたとき"
  STOPIMPROVERELATIONSMAXOPINIONUS_HEADER:0 "使者"
  STOPIMPROVERELATIONSMAXOPINIONUS_1:0 "$RECIPIENT$"
@@ -876,7 +876,7 @@
  STOPIMPROVERELATIONSMAXOPINIONUS_BTN1:0 "外交関係を維持"
  STOPIMPROVERELATIONSMAXOPINIONUS_BTN2:0 "外交関係を維持"
  STOPIMPROVERELATIONSMAXOPINIONUS_BTN3:0 "外交官を呼び戻す"
- STOPIMPROVERELATIONSMAXOPINION_TITLE:0 "関係改善を停止"
+ STOPIMPROVERELATIONSMAXOPINION_TITLE:0 "関係改善の停止"
  STOPIMPROVERELATIONSMAXOPINION_SETUP:0 "関係値が最大に達したため、ある国が他国との関係改善を止めたとき"
  STOPIMPROVERELATIONSMAXOPINION_HEADER:0 "使者"
  STOPIMPROVERELATIONSMAXOPINION_1:0 "$WHO$"
@@ -889,7 +889,7 @@
  STOPIMPROVERELATIONSMAXOPINION_BTN1:0 "OK"
  STOPIMPROVERELATIONSMAXOPINION_BTN2:0 "OK"
  STOPIMPROVERELATIONSMAXOPINION_BTN3:0 "移動"
- COREGAINOTHER_TITLE:0 "中核州を獲得"
+ COREGAINOTHER_TITLE:0 "中核州の獲得"
  COREGAINOTHER_SETUP:0 "誰かが我々の中核州を獲得したとき"
  COREGAINOTHER_HEADER:0 "$MESSENGER$"
  COREGAINOTHER_1:0 "$WHO$は中核州を獲得した"
@@ -899,7 +899,7 @@
  COREGAINOTHER_BTN2:0 "OK"
  COREGAINOTHER_BTN3:0 "移動"
  COREGAINOTHER_MAP:0 "中核州！"
- DIPLO_NO_MAINT_TITLE:0 "外交協定を破棄"
+ DIPLO_NO_MAINT_TITLE:0 "外交協定の破棄"
  DIPLO_NO_MAINT_SETUP:0 "君主力不足により外交協定が破られたとき"
  DIPLO_NO_MAINT_HEADER:0 "使者"
  DIPLO_NO_MAINT_1:0 "$ACTOR$"
@@ -951,7 +951,7 @@
  GIFTTOOTHER_BTN1:0 "OK"
  GIFTTOOTHER_BTN2:0 "OK"
  GIFTTOOTHER_BTN3:0 "移動"
- LEAVECOALITION_TITLE:0 "包囲網から離脱"
+ LEAVECOALITION_TITLE:0 "包囲網離脱"
  LEAVECOALITION_SETUP:0 "我が国が軍事包囲網から離脱したとき"
  LEAVECOALITION_HEADER:0 "$MESSENGER$"
  LEAVECOALITION_1:0 "我々は軍事包囲網から離脱しました。"
@@ -962,7 +962,7 @@
  LEAVECOALITION_BTN1:0 "OK"
  LEAVECOALITION_BTN2:0 "OK"
  LEAVECOALITION_BTN3:0 "移動"
- FORMCOALITIONACCEPT_TITLE:0 "包囲網へ加入"
+ FORMCOALITIONACCEPT_TITLE:0 "包囲網加盟"
  FORMCOALITIONACCEPT_SETUP:0 "我が国がある国に対する軍事包囲網に参加したとき"
  FORMCOALITIONACCEPT_HEADER:0 "$MESSENGER$"
  FORMCOALITIONACCEPT_1:0 "我々は軍事包囲網に加入しました。"
@@ -973,7 +973,7 @@
  FORMCOALITIONACCEPT_BTN1:0 "完璧だ！"
  FORMCOALITIONACCEPT_BTN2:0 "完璧だ！"
  FORMCOALITIONACCEPT_BTN3:0 "移動"
- FORMCOALITIONWEACCEPT_TITLE:0 "包囲網へ加入"
+ FORMCOALITIONWEACCEPT_TITLE:0 "包囲網加盟"
  FORMCOALITIONWEACCEPT_SETUP:0 "他国が我々に対する軍事包囲網に参加したとき"
  FORMCOALITIONWEACCEPT_HEADER:0 "使者"
  FORMCOALITIONWEACCEPT_1:0 "$ACTOR$"
@@ -984,7 +984,7 @@
  FORMCOALITIONWEACCEPT_BTN1:0 "気掛かりだ"
  FORMCOALITIONWEACCEPT_BTN2:0 "気掛かりだ"
  FORMCOALITIONWEACCEPT_BTN3:0 "移動"
- FORMCOALITIONINVACCEPTOTHER_TITLE:0 "包囲網へ加入"
+ FORMCOALITIONINVACCEPTOTHER_TITLE:0 "包囲網加盟"
  FORMCOALITIONINVACCEPTOTHER_SETUP:0 "外国が軍事包囲網に参加したとき"
  FORMCOALITIONINVACCEPTOTHER_HEADER:0 "使者"
  FORMCOALITIONINVACCEPTOTHER_1:0 "$RECIPIENT$"
@@ -994,7 +994,7 @@
  FORMCOALITIONINVACCEPTOTHER_BTN1:0 "OK"
  FORMCOALITIONINVACCEPTOTHER_BTN2:0 "OK"
  FORMCOALITIONINVACCEPTOTHER_BTN3:0 "移動"
- LEAVECOALITIONOTHER_TITLE:0 "包囲網から離脱"
+ LEAVECOALITIONOTHER_TITLE:0 "包囲網離脱"
  LEAVECOALITIONOTHER_SETUP:0 "外国が軍事包囲網から離脱したとき"
  LEAVECOALITIONOTHER_HEADER:0 "使者"
  LEAVECOALITIONOTHER_1:0 "$RECIPIENT$"
@@ -1004,7 +1004,7 @@
  LEAVECOALITIONOTHER_BTN1:0 "OK"
  LEAVECOALITIONOTHER_BTN2:0 "OK"
  LEAVECOALITIONOTHER_BTN3:0 "移動"
- LEAVECOALITIONWEACCEPT_TITLE:0 "包囲網から離脱"
+ LEAVECOALITIONWEACCEPT_TITLE:0 "包囲網離脱"
  LEAVECOALITIONWEACCEPT_SETUP:0 "他国が我々に対する軍事包囲網から離脱したとき"
  LEAVECOALITIONWEACCEPT_HEADER:0 "使者"
  LEAVECOALITIONWEACCEPT_1:0 "$ACTOR$"
@@ -1015,7 +1015,7 @@
  LEAVECOALITIONWEACCEPT_BTN1:0 "よし！"
  LEAVECOALITIONWEACCEPT_BTN2:0 "よし！"
  LEAVECOALITIONWEACCEPT_BTN3:0 "移動"
- LEAVEFEDERATION_TITLE:0 "連邦を離脱"
+ LEAVEFEDERATION_TITLE:0 "連邦離脱"
  LEAVEFEDERATION_SETUP:0 "我が国が連邦を離脱したとき"
  LEAVEFEDERATION_HEADER:0 "$MESSENGER$"
  LEAVEFEDERATION_1:0 "我々は連邦を離脱しました"
@@ -1026,7 +1026,7 @@
  LEAVEFEDERATION_BTN1:0 "OK"
  LEAVEFEDERATION_BTN2:0 "OK"
  LEAVEFEDERATION_BTN3:0 "移動"
- WEJOINEDFEDERATION_TITLE:0 "連邦に加入"
+ WEJOINEDFEDERATION_TITLE:0 "連邦加盟"
  WEJOINEDFEDERATION_SETUP:0 "我が国が連邦に加入したとき"
  WEJOINEDFEDERATION_HEADER:0 "$MESSENGER$"
  WEJOINEDFEDERATION_1:0 "我々は連邦に加入ました。"
@@ -1037,7 +1037,7 @@
  WEJOINEDFEDERATION_BTN1:0 "完璧だ！"
  WEJOINEDFEDERATION_BTN2:0 "完璧だ！"
  WEJOINEDFEDERATION_BTN3:0 "移動"
- WEJOINEDFEDERATIONDECLINE_TITLE:0 "連邦を拒否"
+ WEJOINEDFEDERATIONDECLINE_TITLE:0 "連邦拒否"
  WEJOINEDFEDERATIONDECLINE_SETUP:0 "我が国が連邦加入を拒否されたとき"
  WEJOINEDFEDERATIONDECLINE_HEADER:0 "$MESSENGER$"
  WEJOINEDFEDERATIONDECLINE_1:0 "我々は連邦に迎え入れられませんでした。"
@@ -1048,7 +1048,7 @@
  WEJOINEDFEDERATIONDECLINE_BTN1:0 "憂慮する！"
  WEJOINEDFEDERATIONDECLINE_BTN2:0 "憂慮する！"
  WEJOINEDFEDERATIONDECLINE_BTN3:0 "移動"
- OTHERJOINSOURFEDERATION_TITLE:0 "連邦に加入"
+ OTHERJOINSOURFEDERATION_TITLE:0 "連邦加盟"
  OTHERJOINSOURFEDERATION_SETUP:0 "他国が我々の連邦に加入したとき"
  OTHERJOINSOURFEDERATION_HEADER:0 "使者"
  OTHERJOINSOURFEDERATION_1:0 "$ACTOR$"
@@ -1059,7 +1059,7 @@
  OTHERJOINSOURFEDERATION_BTN1:0 "完璧だ！"
  OTHERJOINSOURFEDERATION_BTN2:0 "完璧だ！"
  OTHERJOINSOURFEDERATION_BTN3:0 "移動"
- OTHERJOINSOURFEDERATIONDECLINE_TITLE:0 "連邦を拒否"
+ OTHERJOINSOURFEDERATIONDECLINE_TITLE:0 "連邦拒否"
  OTHERJOINSOURFEDERATIONDECLINE_SETUP:0 "他国が我々の連邦招待を拒否したとき"
  OTHERJOINSOURFEDERATIONDECLINE_HEADER:0 "使者"
  OTHERJOINSOURFEDERATIONDECLINE_1:0 "$ACTOR$"
@@ -1069,7 +1069,7 @@
  OTHERJOINSOURFEDERATIONDECLINE_BTN1:0 "最悪だ！"
  OTHERJOINSOURFEDERATIONDECLINE_BTN2:0 "最悪だ！"
  OTHERJOINSOURFEDERATIONDECLINE_BTN3:0 "移動"
- OTHERJOINSOTHERFEDERATION_TITLE:0 "連邦加入"
+ OTHERJOINSOTHERFEDERATION_TITLE:0 "連邦加盟"
  OTHERJOINSOTHERFEDERATION_SETUP:0 "他国が連邦に加入したとき"
  OTHERJOINSOTHERFEDERATION_HEADER:0 "使者"
  OTHERJOINSOTHERFEDERATION_1:0 "$ACTOR$"
@@ -1080,7 +1080,7 @@
  OTHERJOINSOTHERFEDERATION_BTN1:0 "憂慮する！"
  OTHERJOINSOTHERFEDERATION_BTN2:0 "憂慮する！"
  OTHERJOINSOTHERFEDERATION_BTN3:0 "移動"
- OTHERLEAVSOURFEDERATION_TITLE:0 "連邦を離脱"
+ OTHERLEAVSOURFEDERATION_TITLE:0 "連邦離脱"
  OTHERLEAVSOURFEDERATION_SETUP:0 "他国が我々の連邦を離脱したとき"
  OTHERLEAVSOURFEDERATION_HEADER:0 "使者"
  OTHERLEAVSOURFEDERATION_1:0 "$ACTOR$"
@@ -1091,7 +1091,7 @@
  OTHERLEAVSOURFEDERATION_BTN1:0 "気掛かりだ"
  OTHERLEAVSOURFEDERATION_BTN2:0 "気掛かりだ"
  OTHERLEAVSOURFEDERATION_BTN3:0 "移動"
- OTHERKICKEDOUTOURFEDERATION_TITLE:0 "連邦から追放"
+ OTHERKICKEDOUTOURFEDERATION_TITLE:0 "連邦追放"
  OTHERKICKEDOUTOURFEDERATION_SETUP:0 "ある国が我々の連邦から追放されたとき"
  OTHERKICKEDOUTOURFEDERATION_HEADER:0 "使者"
  OTHERKICKEDOUTOURFEDERATION_1:0 "$ACTOR$"
@@ -1102,7 +1102,7 @@
  OTHERKICKEDOUTOURFEDERATION_BTN1:0 "よし！"
  OTHERKICKEDOUTOURFEDERATION_BTN2:0 "よし！"
  OTHERKICKEDOUTOURFEDERATION_BTN3:0 "移動"
- OTHERLEAVSOTHERFEDERATION_TITLE:0 "連邦を離脱"
+ OTHERLEAVSOTHERFEDERATION_TITLE:0 "連邦脱退"
  OTHERLEAVSOTHERFEDERATION_SETUP:0 "他国が連邦を離脱したとき"
  OTHERLEAVSOTHERFEDERATION_HEADER:0 "使者"
  OTHERLEAVSOTHERFEDERATION_1:0 "$ACTOR$"
@@ -1250,7 +1250,7 @@
  INTERVENE_OTHER_SIDE_BTN2:0 "OK"
  INTERVENE_OTHER_SIDE_BTN3:0 "移動"
  FABRICATECLAIMS_TITLE:0 "請求権の捏造"
- JUSTIFYTRADECONFLICT_TITLE:0 "交易紛争を正当化"
+ JUSTIFYTRADECONFLICT_TITLE:0 "交易紛争の正当化"
  FABRICATECLAIMSME_TITLE:0 "請求権の捏造"
  FABRICATECLAIMSME_SETUP:0 "我々が他国への請求権を捏造したとき"
  FABRICATECLAIMSME_HEADER:0 "$MESSENGER$"
@@ -1273,7 +1273,7 @@
  FABRICATECLAIMSTHEM_BTN1:0 "OK"
  FABRICATECLAIMSTHEM_BTN2:0 "OK"
  FABRICATECLAIMSTHEM_BTN3:0 "移動"
- JUSTIFYTRADECONFLICTME_TITLE:0 "交易紛争を正当化"
+ JUSTIFYTRADECONFLICTME_TITLE:0 "交易紛争の正当化"
  JUSTIFYTRADECONFLICTME_SETUP:0 "我々が他国に対して交易紛争を正当化したとき"
  JUSTIFYTRADECONFLICTME_HEADER:0 "$MESSENGER$"
  JUSTIFYTRADECONFLICTME_1:0 "交易紛争を正当化"
@@ -1284,7 +1284,7 @@
  JUSTIFYTRADECONFLICTME_BTN1:0 "OK"
  JUSTIFYTRADECONFLICTME_BTN2:0 "OK"
  JUSTIFYTRADECONFLICTME_BTN3:0 "移動"
- JUSTIFYTRADECONFLICTTHEM_TITLE:0 "交易紛争を正当化"
+ JUSTIFYTRADECONFLICTTHEM_TITLE:0 "交易紛争の正当化"
  JUSTIFYTRADECONFLICTTHEM_SETUP:0 "他国が我々に対して交易紛争を正当化したとき"
  JUSTIFYTRADECONFLICTTHEM_HEADER:0 "$MESSENGER$"
  JUSTIFYTRADECONFLICTTHEM_1:0 "交易紛争を正当化"
@@ -1319,7 +1319,7 @@
  INFILTRATEADMINTHEM_BTN1:0 "OK"
  INFILTRATEADMINTHEM_BTN2:0 "OK"
  INFILTRATEADMINTHEM_BTN3:0 "移動"
- CANCEL_INFILTRATEADMINME_TITLE:0 "潜入を中断"
+ CANCEL_INFILTRATEADMINME_TITLE:0 "潜入の中断"
  CANCEL_INFILTRATEADMINME_SETUP:0 "我々が他国の政府への潜入を中断したとき"
  CANCEL_INFILTRATEADMINME_HEADER:0 "$MESSENGER$"
  CANCEL_INFILTRATEADMINME_1:0 "潜入を中断"
@@ -1365,7 +1365,7 @@
  SABOTAGEREPTHEM_BTN1:0 "OK"
  SABOTAGEREPTHEM_BTN2:0 "OK"
  SABOTAGEREPTHEM_BTN3:0 "移動"
- SUPPORTREBELSME_TITLE:0 "反乱軍を支援"
+ SUPPORTREBELSME_TITLE:0 "反乱軍への支援"
  SUPPORTREBELSME_SETUP:0 "我々が他国での反乱を支援したとき"
  SUPPORTREBELSME_HEADER:0 "$MESSENGER$"
  SUPPORTREBELSME_1:0 "反乱軍を支援"
@@ -1376,7 +1376,7 @@
  SUPPORTREBELSME_BTN1:0 "OK"
  SUPPORTREBELSME_BTN2:0 "OK"
  SUPPORTREBELSME_BTN3:0 "移動"
- SUPPORTREBELSTHEM_TITLE:0 "反乱軍を支援"
+ SUPPORTREBELSTHEM_TITLE:0 "反乱軍への支援"
  SUPPORTREBELSTHEM_SETUP:0 "他国が我が国での反乱を支援したとき"
  SUPPORTREBELSTHEM_HEADER:0 "$MESSENGER$"
  SUPPORTREBELSTHEM_1:0 "反乱軍を支援"
@@ -1388,7 +1388,7 @@
  SUPPORTREBELSTHEM_BTN1:0 "OK"
  SUPPORTREBELSTHEM_BTN2:0 "OK"
  SUPPORTREBELSTHEM_BTN3:0 "移動"
- CANCEL_SUPPORTREBELSME_TITLE:0 "反乱軍の支援を中止"
+ CANCEL_SUPPORTREBELSME_TITLE:0 "反乱軍への支援中止"
  CANCEL_SUPPORTREBELSME_SETUP:0 "我々が他国での反乱支援を中断したとき"
  CANCEL_SUPPORTREBELSME_HEADER:0 "$MESSENGER$"
  CANCEL_SUPPORTREBELSME_1:0 "反乱軍の支援を中止"
@@ -1401,7 +1401,7 @@
  CANCEL_SUPPORTREBELSME_BTN1:0 "OK"
  CANCEL_SUPPORTREBELSME_BTN2:0 "OK"
  CANCEL_SUPPORTREBELSME_BTN3:0 "移動"
- CANCEL_SUPPORTREBELSTHEM_TITLE:0 "反乱軍の支援を中止"
+ CANCEL_SUPPORTREBELSTHEM_TITLE:0 "反乱軍への支援中止"
  CANCEL_SUPPORTREBELSTHEM_SETUP:0 "他国が我が国での反乱支援を中断したとき"
  CANCEL_SUPPORTREBELSTHEM_HEADER:0 "$MESSENGER$"
  CANCEL_SUPPORTREBELSTHEM_1:0 "反乱軍の支援を中止"
@@ -1437,7 +1437,7 @@
  SOWDISCONTENTTHEM_BTN1:0 "OK"
  SOWDISCONTENTTHEM_BTN2:0 "OK"
  SOWDISCONTENTTHEM_BTN3:0 "移動"
- AGITATELIBERTYME_TITLE:0 "自由を扇動"
+ AGITATELIBERTYME_TITLE:0 "自由の扇動"
  AGITATELIBERTYME_SETUP:0 "我々が従属国で自由を扇動したとき"
  AGITATELIBERTYME_HEADER:0 "$MESSENGER$"
  AGITATELIBERTYME_1:0 "自由を扇動"
@@ -1448,7 +1448,7 @@
  AGITATELIBERTYME_BTN1:0 "OK"
  AGITATELIBERTYME_BTN2:0 "OK"
  AGITATELIBERTYME_BTN3:0 "移動"
- AGITATELIBERTYTHEM_TITLE:0 "自由を扇動"
+ AGITATELIBERTYTHEM_TITLE:0 "自由の扇動"
  AGITATELIBERTYTHEM_SETUP:0 "他国が我々の自由を扇動したとき"
  AGITATELIBERTYTHEM_HEADER:0 "$MESSENGER$"
  AGITATELIBERTYTHEM_1:0 "自由を扇動"
@@ -1460,7 +1460,7 @@
  AGITATELIBERTYTHEM_BTN1:0 "OK"
  AGITATELIBERTYTHEM_BTN2:0 "OK"
  AGITATELIBERTYTHEM_BTN3:0 "移動"
- AGITATELIBERTYOVERLORD_TITLE:0 "自由を扇動"
+ AGITATELIBERTYOVERLORD_TITLE:0 "自由の扇動"
  AGITATELIBERTYOVERLORD_SETUP:0 "他国が我々の従属国で自由を扇動したとき"
  AGITATELIBERTYOVERLORD_HEADER:0 "$MESSENGER$"
  AGITATELIBERTYOVERLORD_1:0 "自由を扇動"
@@ -1518,7 +1518,7 @@
  CORRUPTOFFICIALSTHEM_BTN1:0 "OK"
  CORRUPTOFFICIALSTHEM_BTN2:0 "OK"
  CORRUPTOFFICIALSTHEM_BTN3:0 "移動"
- SLANDERMERCHANTSME_TITLE:0 "商人を中傷"
+ SLANDERMERCHANTSME_TITLE:0 "商人への中傷"
  SLANDERMERCHANTSME_SETUP:0 "我々が他国の商人を中傷したとき"
  SLANDERMERCHANTSME_HEADER:0 "$MESSENGER$"
  SLANDERMERCHANTSME_1:0 "商人を中傷"
@@ -1529,7 +1529,7 @@
  SLANDERMERCHANTSME_BTN1:0 "OK"
  SLANDERMERCHANTSME_BTN2:0 "OK"
  SLANDERMERCHANTSME_BTN3:0 "移動"
- SLANDERMERCHANTSTHEM_TITLE:0 "商人を中傷"
+ SLANDERMERCHANTSTHEM_TITLE:0 "商人への中傷"
  SLANDERMERCHANTSTHEM_SETUP:0 "他国が我々の評判を落としたとき"
  SLANDERMERCHANTSTHEM_HEADER:0 "$MESSENGER$"
  SLANDERMERCHANTSTHEM_1:0 "商人を中傷"
@@ -1560,9 +1560,9 @@
  EVILWEDISCOVERED_SETUP:0 "我々に対して諜報網を構築している者を発見したとき"
  EVILWEDISCOVERED_HEADER:0 "$MESSENGER$"
  EVILWEDISCOVERED_1:0 "我々はスパイを発見しました！"
- EVILWEDISCOVERED_2:0 "以下の国が諜報網を構築していたところを発見しました。"
+ EVILWEDISCOVERED_2:0 ""
  EVILWEDISCOVERED_3:0 "$WHO$"
- EVILWEDISCOVERED_4:0 " "
+ EVILWEDISCOVERED_4:0 "が諜報網を構築していたところを発見しました。"
  EVILWEDISCOVERED_5:0 "外交官は追放され、多数のスパイが逮捕されました。"
  EVILWEDISCOVERED_6:0 "彼らの諜報網は$NEWVAL|Y$に縮小します。"
  EVILWEDISCOVERED_LOG:0 "$WHO$は$TARGET$での$ACTION$を実行中に発見されました。"
@@ -1573,9 +1573,9 @@
  EVILDISCOVEREDOTHER_SETUP:0 "秘密外交使節団が発見されたとき"
  EVILDISCOVEREDOTHER_HEADER:0 "$MESSENGER$"
  EVILDISCOVEREDOTHER_1:0 "スパイを発見！"
- EVILDISCOVEREDOTHER_2:0 "以下の国が諜報網を構築していたところを発見しました。"
+ EVILDISCOVEREDOTHER_2:0 ""
  EVILDISCOVEREDOTHER_3:0 "$WHO$"
- EVILDISCOVEREDOTHER_4:0 ""
+ EVILDISCOVEREDOTHER_4:0 "が諜報網を構築していたところを発見しました。"
  EVILDISCOVEREDOTHER_5:0 "$RECIPIENT$"
  EVILDISCOVEREDOTHER_6:0 "外交官は追放され、多数のスパイが逮捕されました。"
  EVILDISCOVEREDOTHER_LOG:0 "$WHO$は$TARGET$での$ACTION$を実行中に発見されました。"
@@ -1647,7 +1647,7 @@
  INFILTRATE_DISCOVERED:0 "この不名誉な行動が発見されたことは、我々の威信に$VALUE|=+$の影響を与えます。"
  CREATELEADER_DESC:0 "彼の疑いのない忠誠心と軍事的教育、"
  CREATELEADER_SKILL_DESC:0 "特に$SKILL$という彼の能力は国家に貢献するでしょう。"
- CREATELEADER_TITLE:0 "指導者を採用"
+ CREATELEADER_TITLE:0 "指揮官の雇用"
  CREATELEADER_SETUP:0 "我々が指揮官を雇用したとき"
  CREATELEADER_HEADER:0 "我々は次の新しい指導者を採用しました。"
  CREATELEADER_1:0 "$TYPE$ $NAME$"
@@ -1656,7 +1656,7 @@
  CREATELEADER_LOG:0 "我々は$TYPE$$NAME$を採用しました。"
  CREATELEADER_BTN1:0 "OK"
  CREATELEADER_BTN2:0 "OK"
- DISMISSLEADER_TITLE:0 "指導者の罷免"
+ DISMISSLEADER_TITLE:0 "指揮官の罷免"
  DISMISSLEADER_SETUP:0 "我々が指揮官を解任したとき"
  DISMISSLEADER_HEADER:0 "我々は指導者の一人を罷免しました"
  DISMISSLEADER_1:0 "$TYPE$ $NAME$"
@@ -1864,7 +1864,7 @@
  EMPEROR_SETUP:0 "新しい皇帝が選出されたとき"
  EMPEROR_HEADER:0 "新しい皇帝が選出されました。"
  EMPEROR_1:0 "神聖ローマ帝国"
- EMPEROR_2:0 "選帝侯より"
+ EMPEROR_2:0 "選帝侯により"
  EMPEROR_3:0 "$COUNTRY$の$KING$が"
  EMPEROR_4:0 "新しい皇帝として選出されました。神聖ローマ帝国の新しい正当主権者は、"
  EMPEROR_5:0 "皇帝として諸国の権利を守ると約束しました。"
@@ -4273,8 +4273,8 @@
  OTHERSELLPROV_SETUP:0 "ある国が他国へ州を販売したとき"
  OTHERSELLPROV_HEADER:0 "使者"
  OTHERSELLPROV_1:0 "$ACTOR$"
- OTHERSELLPROV_2:0 "$ACTOR$は財政上または外交上の問題を抱えている可能性があり、最後の手段として"
- OTHERSELLPROV_3:0 "その州の一つを売却することに合意しました。"
+ OTHERSELLPROV_2:0 "$ACTOR$は財政上または外交上の問題を抱えているようで、"
+ OTHERSELLPROV_3:0 "最後の手段として州の一つを売却することに合意しました。"
  OTHERSELLPROV_4:0 "原因が何であれ、$PROVINCE$は現在、以下が領有しています。"
  OTHERSELLPROV_BTN1:0 "OK"
  OTHERSELLPROV_BTN2:0 "OK"
@@ -4498,7 +4498,7 @@
  MERCHANTFAIL_SETUP:0 "我が国の商人が交易ノードで交易拡大に失敗したとき"
  MERCWELOOSE_6:0 "その交易ノードで。"
  TRADEREFUSAL_4:0 "アクセスを拒絶しました！"
- TRADEREFUSAL_6:0 "これは、彼らの州にあるノードでの我が国の交易力が低下することを意味しています。"
+ TRADEREFUSAL_6:0 "これは、彼らの州にあるノードでの我々の交易力が低下することを意味しています。"
  TRADEREFUSAL_LOG:0 "$ACTOR$、州内への我が国の商人のアクセスを拒否"
  TRADEREFUSALOTHER_6:0 "商人のアクセスを拒否しました"
  TRADEREFUSALOTHER_LOG:0 "$ACTOR$、州内への$RECIPIENT$商人のアクセスを拒否！"
@@ -7063,7 +7063,7 @@
  CURRYFAVORS_BTN1:0 "OK"
  CURRYFAVORS_BTN2:0 "OK"
  CURRYFAVORS_BTN3:0 "移動"
- STOPCURRYFAVORS_TITLE:0 "おべっかの中止"
+ STOPCURRYFAVORS_TITLE:0 "おべっかを止める"
  STOPCURRYFAVORS_SETUP:0 "ある国が他の国に好感度稼ぎのためにおべっかをしているのを取り止める。"
  STOPCURRYFAVORS_HEADER:0 "使者から"
  STOPCURRYFAVORS_1:0 "$ACTOR$"
