--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -857,8 +857,8 @@
  CHU_ADJ:0 "チュクチ"
  HOD:0 "ホディン"
  HOD_ADJ:0 "ホディン"
- CHV:0 "チャウシュヴェニ"
- CHV_ADJ:0 "チャウシュヴェニ"
+ CHV:0 "チャウチュヴェヌィ"
+ CHV_ADJ:0 "チャウチュヴェヌィ"
  KMC:0 "カムチャダール"
  KMC_ADJ:0 "カムチャダール"
  BRT:0 "ブリヤート"
