--- a/source/localisation/missions_l_english.yml
+++ b/source/localisation/missions_l_english.yml
@@ -250,7 +250,7 @@
  partition_poland_desc:1 "かつてポーランド領ガリツィアは我が国にとって他国との有益な緩衝地帯であった。しかしながら、敵対国の手に落ちるくらいなら、この豊かな州を我が国が確保する時が来た。"
  subjugate_hungary_title:0 "ハンガリーの没落"
  subjugate_hungary_desc:0 "オーストリア公国との関係の中でハンガリーの相対的な衰退が懸念されている。我らは、敵対者の手に落ちぬよう、ハンガリーとの関係をより強化せねばならない。"
- austrian_hungary_title:0 "王室ハンガリー"
+ austrian_hungary_title:0 "王領ハンガリー"
  austrian_hungary_desc:0 "ハンガリー王国は全ての方面で危険な敵に晒されている。我らが乗り込んで、ハンガリー人を直接守り、一人の統治者の下で、彼らの土地を統一せねばならない。"
  austrian_croatia_title:0 "クロアチアの保護"
  austrian_croatia_desc:0 "古代のクロアチア王国に軍事の前線を作ろう。この方法で南東ヨーロッパのキリスト教徒の土地に侵入しようとするものは全て受け流すことができるだろう。"
