Save/Update files [ci skip]

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -544,7 +544,7 @@
  karaman_area:0 "カラマン"
  karaman_area_name:0 "カラマン"
  karaman_area_adj:0 "カラマン"
- hudavendigar_area:0 "ヒュダヴェンディギャール"
+ hudavendigar_area:0 "ヒュダヴェンディガル"
  hudavendigar_area_name:1 "ブルサ"
  hudavendigar_area_adj:1 "ブルサ"
  aydin_area:0 "アイドゥン"
@@ -1891,8 +1891,8 @@
  oregon_area_name:1 "カラプヤ"
  oregon_area_adj:1 "カラプヤン"
  columbia_river_area:0 "コロンビア川"
- columbia_river_area_name:1 "エスキアライズ"
- columbia_river_area_adj:1 "エスキアライズ"
+ columbia_river_area_name:1 "スポケーン"
+ columbia_river_area_adj:1 "スポケーン"
  snake_river_area:0 "スネーク川"
  snake_river_area_name:0 "ニミイプウ"
  snake_river_area_adj:0 "二ミイプウアン"
