--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -862,8 +862,8 @@
  NATIVE:0 "原住民"
  CHARTER_BASE_RELUCTANCE:1 "基本拒否値："
  alert_trade_company_investment_instant:0 "§Y交易会社投資が可能！§!"
- alert_trade_company_investment_delayed:0 "以下の交易会社投資が出来ます：\n$INVESTMENTS$\n\n§Gクリックすると交易会社地域を順に見ることが出来ます§!"
- POSSIBLE_TRADE_COMPANY_INVESTMENT:0 "$AREA_COUNT$$AREA$に$INVESTMENT|Y$"
+ alert_trade_company_investment_delayed:0 "以下の交易会社投資が建設可能：\n$INVESTMENTS$\n\n§Gクリックすると交易会社地域を順に見ることができます§!"
+ POSSIBLE_TRADE_COMPANY_INVESTMENT:0 "$INVESTMENT|Y$：$AREA_COUNT$$AREA$"
  PART_OF_TRADE_COMPANY:0 "$PROV|Y$は$NAME|Y$交易会社の一部です"
  CHARTER_DEVELOPMENT_RELUCTANCE:1 "州の開発度："
  TRADE_COMPANY_COUNTRY_MODIFIER_NAME:0 "$CHARTER|Y$への投資 $INVESTMENT|Y$"
