--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1304,8 +1304,8 @@
  desc_pap_visitor_of_missions_in_the_indies_noncatholic:0 "イエズス会の上位の宣教師がこの州を管理し、カトリックの信仰を広める手助けをしている。"
  pap_japanese_jesuits:0 "日本のイエズス会"
  desc_pap_japanese_jesuits:0 "これらの聖職者はカトリックへの改宗者であり、彼らの信仰を彼らの故郷の人々に広めたいと望んでいる。他の場所にいる教会員と彼らのやり取りは、彼らに南蛮の交易商と海洋交易路の素晴らしい知識も提供する。"
- pap_latin_patriarch_of_jerusalem:0 "エルサレムのラテン総主教"
- desc_pap_latin_patriarch_of_jerusalem:0 "熱心なキリスト教徒が今、エルサレムに集まり、回復されたラテン総主教の感動的な言葉を聞いている。彼らは総主教の説教に駆り立てられ、エルサレムを二度と敵の手に陥さないこと、そして永遠に信仰を守ることを誓っている。"
+ pap_latin_patriarch_of_jerusalem:0 "ラテン・エルサレム総大司教"
+ desc_pap_latin_patriarch_of_jerusalem:0 "熱心なキリスト教徒が今、エルサレムに集まり、回復されたラテン総大司教の感動的な言葉を聞いている。彼らは総大司教の説教に駆り立てられ、エルサレムを二度と敵の手に陥さないこと、そして永遠に信仰を守ることを誓っている。"
  flavor_pap.EVTNAME11:0 "教皇はシスマを癒す"
  flavor_pap.EVTDESC11:0 "ローマの司教は大分裂を宣言しており、コンスタンティノープルとモスクワにおける彼の弱々しい新しい教会の人形に支持された宣言である。我々はかつてのやり方を続けることができるが、教皇庁の勝利は、神が真に味方についていることを示唆している。"
  flavor_pap.EVTOPTA11:0 "我々はカトリックを受け入れよう。"
@@ -1644,7 +1644,7 @@
  emp_boh_hungarian_union_title:0 "ハンガリー同君連合"
  emp_boh_hungarian_union_desc:0 "ハンガリーとボヘミアは、かつては1人の王の下で統一されていたが、寛大なアルベルトの死により1439年に二つに分かれた。我々はこの正当な国家を回復すべきである。"
  emp_boh_protect_against_turks_title:0 "トルコからの防衛"
- emp_boh_protect_against_turks_desc:0 "オスマントルコは、キリスト教世界を巻き込む脅威となる、領土征服の危険な騒ぎに着手している。我々は国境が、避けられないトルコの猛攻撃に対し強化されていることを保証しなければならない。"
+ emp_boh_protect_against_turks_desc:0 "オスマントルコは、キリスト教世界を巻き込む脅威となる、領土征服の危険な騒ぎに着手している。我々は避けられないであろうトルコの猛攻撃に対し、国境を確実に守らなければならない。"
  emp_boh_revenge_for_nicopolis_title:0 "ニコポリスの復讐"
  emp_boh_revenge_for_nicopolis_desc:0 "1396年、ボヘミア王はブルガリアのトルコ人に対する正義の十字軍に乗り出し、結局、異教徒に打ち負かされた。私たちは再び軍を結集させ、ブルガリアを奪還し、海を越えてトルコ人を後退させなければならない！"
  emp_boh_polish_diplomacy_title:0 "ポーランドとの外交"
