--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -48,7 +48,7 @@
  TRADELEAGUE_DISBAND_NO_LEADER2:0 "リーダーは十分な威信と、"
  TRADELEAGUE_DISBAND_NO_LEADER3:0 "適切な政体を持っている必要があります。"
  TRADELEAGUE_DISBAND_TOO_FEW1:0 "$OLD_LEADER$の貿易同盟は解散しました。"
- TRADELEAGUE_DISBAND_TOO_FEW2:0 "$COUNTRY$が脱退後、十分なメンバーがいませんでした。"
+ TRADELEAGUE_DISBAND_TOO_FEW2:0 "$COUNTRY$脱退後、加盟国が足りなかったのです。"
  INVITETOTRADELEAGUETITLE:0 "貿易同盟への招待"
  INVITETOTRADELEAGUEDESC:0 "$THEY$が$LEADER$率いる貿易同盟に参加するかどうか尋ねています。"
  KICKFROMTRADELEAGUETITLE:0 "貿易同盟から追放"
