--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -311,7 +311,7 @@
  PROV314:0 "ヴォログダ"
  PROV315:0 "フィンマルク"
  PROV316:0 "コジャエリ"
- PROV317:0 "ヒュダヴェンディギャール"
+ PROV317:0 "ヒュダヴェンディガル"
  PROV318:0 "スグラ"
  PROV319:0 "メンテシェ"
  PROV320:0 "ロードス"
@@ -900,9 +900,9 @@
  PROV921:1 "Ishenoca"
  PROV922:1 "Tohome"
  PROV923:0 "ペンサコーラ"
- PROV924:1 "Tawasa"
+ PROV924:1 "タワサ"
  PROV925:1 "コウェタ"
- PROV926:1 "エイェイシ"
+ PROV926:2 "アイス"
  PROV927:0 "ティムクア"
  PROV928:0 "アパラチー"
  PROV929:0 "グアル"
@@ -1983,7 +1983,7 @@
  PROV2007:1 "Sahnish"
  PROV2008:1 "Sihasapa"
  PROV2009:0 "オグララ"
- PROV2010:1 "Pequot"
+ PROV2010:1 "ピクォート"
  PROV2011:1 "Senedo"
  PROV2012:1 "Ersegonteog"
  PROV2013:1 "Allesikantekw"
@@ -2450,7 +2450,7 @@
  PROV2484:1 "Aqokulo"
  PROV2485:1 "Kwaiailk"
  PROV2486:1 "Mamatchatpam"
- PROV2487:1 "Sqeliz"
+ PROV2487:1 "スポケーン"
  PROV2488:0 "パルース"
  PROV2489:1 "Boho'inee"
  PROV2490:1 "Kusiutta"
@@ -2504,7 +2504,7 @@
  PROV2538:1 "Ocute"
  PROV2539:0 "モカマ"
  PROV2540:1 "Etowah"
- PROV2541:1 "Combahee"
+ PROV2541:2 "サルーダ"
  PROV2542:0 "クサボ"
  PROV2543:0 "ワカマー"
  PROV2544:0 "ヤドキン"
