--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -49,8 +49,8 @@
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
  HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
  HAS_DISASTER:0 "現在、$NAME|Y$にある。\n"
- HAS_CUSTOM_IDEAS:0 "カスタムアイデアを採用している。\n"
- HAS_NOT_CUSTOM_IDEAS:0 "カスタムアイデアを採用していない。\n"
+ HAS_CUSTOM_IDEAS:0 "カスタム国家アイデアを採用している。\n"
+ HAS_NOT_CUSTOM_IDEAS:0 "カスタム国家アイデアを採用していない。\n"
  HAVE_NO_DISASTER_TRIGGER:0 "現在、国難がない。\n"
  HAVE_DISASTER_TRIGGER:0 "現在、国難がある。\n"
  HAVE_INF_IN:0 "$COUNTRY$が$PROVINCE$に歩兵を配置している。"
@@ -211,8 +211,8 @@
  REMOVE_IDEA_GROUP_EFFECT:0 "$IDEAGROUP|Y$のアイデアグループを削除します。"
  ADD_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを追加します。"
  REMOVE_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを削除します。"
- HRE_INHERITABLE_ENABLED:0 "神聖ローマ帝国は常に同じ国により継承されるようになります。\nもはや皇帝の外交関係枠を属国の諸侯たちで占有することはなくなります\n"
- HRE_INHERITABLE_DISABLED:0 "神聖ローマ帝国は選挙制になります！\n皇帝の属国の諸侯たちは、外交関係枠を使用します\n"
+ HRE_INHERITABLE_ENABLED:1 "神聖ローマ帝国は常に同じ国により継承されるようになります。\nもはや皇帝の外交関係枠を属国の諸侯たちで占有することはなくなります\n"
+ HRE_INHERITABLE_DISABLED:1 "神聖ローマ帝国は選挙制になります！\n皇帝の属国の諸侯たちは、外交関係枠を使用します\n"
  HAS_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っている。\n"
  HAS_NOT_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っていない。\n"
  HAS_MAXIDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを完了している。\n"
