--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -33,11 +33,16 @@
  INFLACTION_REDUCTION:0 "インフレ削減補正：\n"
  MODIFIER_STATE_GOVERNING_INCREASE_COST:0 "ステート統治コスト上昇"
  CENTRALIZE_STATE_CAPITAL:0 "首都のあるステートは集権化できません。"
- WARNING_CONSTRUCTION_LOST: "新しい州に港がなければ、艦船の建造は中止になります。"
- CONSTRUCTION_LOST_TITLE: "艦船の建造中止"
- CONSTRUCTION_LOST_SETUP: "移住する際、新しい州では無効なので、いくつかの工事が解除されます。"
- CONSTRUCTION_LOST_1: "工事の中止"
- CONSTRUCTION_LOST_2: "移住によって、艦船の建造は中止されました。"
- CONSTRUCTION_LOST_3: "港がないと、艦船の建造は出来ません。"
- CONSTRUCTION_LOST_LOG: "新しい州への移住のため、艦船が失われます。"
- CONSTRUCTION_LOST_BTN1: "OK"
+ WARNING_CONSTRUCTION_LOST:0 "新しい州に港がなければ、艦船の建造は中止になります。"
+ CONSTRUCTION_LOST_TITLE:0 "艦船の建造中止"
+ CONSTRUCTION_LOST_SETUP:0 "移住する際、新しい州では無効なので、いくつかの工事が解除されます。"
+ CONSTRUCTION_LOST_1:0 "工事の中止"
+ CONSTRUCTION_LOST_2:0 "移住によって、艦船の建造は中止されました。"
+ CONSTRUCTION_LOST_3:0 "港がないと、艦船の建造は出来ません。"
+ CONSTRUCTION_LOST_LOG:0 "新しい州への移住のため、艦船が失われます。"
+ CONSTRUCTION_LOST_BTN1:0 "OK"
+ PRIMARY_LOCAL:0 "§Y第一管理者§!\nこのプレイヤーは全てのイベントを受け取ることができます。\n"
+ NOT_PRIMARY_LOCAL:0 "§Y第二管理者§!\nこのプレイヤーはイベントを受け取りません。\n"
+ PRIMARY_LOCAL_OBSERVER:0 "§Y第一管理者§!\nこのプレイヤーはオブザーバーモード時、ゲーム内で選択された国家のイベントのみ見ることができます。\n"
+ COOP_NOT_ENABLED:0 "§R協力モードが有効になっていません§!\n"
+ KICK_PLAYER:0 "右クリックすると、ゲームからプレイヤーをキックします。\n"
