--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2578,8 +2578,8 @@
  flavor_pol.EVTOPTA3:0 "新聞を後援する。"
  flavor_pol.EVTOPTB3:0 "許可する。"
  flavor_pol.EVTOPTC3:0 "禁止する。"
- flavor_pol.EVTNAME4:0 "ヴィリニュス大学"
- flavor_pol.EVTDESC4:0 "ヴィリニュス司教ヴァレリアン・プロタセヴィツは、リトアニアの貴族がヴィリニュスまたはカウナスに高等教育機関を設立するようにイエズス会に要求してから1年後、市内中心部でいくつかの建物を購入し、1569年にヴィリニュス大学を設立した。大学の3つの部門は人文科学、哲学、神学だった。1570年に図書館が設立され、ジグムント2世アウグストと大学に入学した最初の学生たちによって2500冊の本が新しい大学に寄贈された。ポーランド王兼リトアニア大公ステファン・バートリは、1579年4月1日にクラクフ大学と同等の地位を与え、イエズス会ヴィルノ大学アカデミーを創設した。1579年10月30日、教皇グレゴリウス13世の大勅書は彼の布告を承認した。大学の最初の学長はピョートル・スカルガだった。"
+ flavor_pol.EVTNAME4:0 "ヴィルニュス大学"
+ flavor_pol.EVTDESC4:0 "ヴィルニュス司教ヴァレリアン・プロタセヴィチは、リトアニアの貴族がヴィルニュスかカウナスに高等教育機関を設立するようにイエズス会に要求してから1年後、市内中心部でいくつかの建物を購入し、1569年にヴィルニュス大学を設立した。大学の3つの部門は人文科学、哲学、神学だった。1570年に図書館が設立され、ジグムント2世アウグストと大学に入学した最初の学生たちによって2500冊の本が新しい大学に寄贈された。ポーランド王およびリトアニア大公ステファン・バートリは、1579年4月1日にクラクフ大学と同等の地位を与え、イエズス会ヴィルノ・アカデミー大学を創設した。1579年10月30日、教皇グレゴリウス13世の大勅書は彼の布告を承認した。大学の最初の学長はピョートル・スカルガだった。"
  flavor_pol.EVTOPTA4:0 "大学を後援する。"
  flavor_pol.EVTOPTB4:0 "何もしない。"
  flavor_pol.EVTNAME5:0 "ヤン・ブロジェク"
@@ -2928,7 +2928,7 @@
  flavor_ayu.EVTOPTA8:0 "寺に資金を寄付する。"
  flavor_ayu.EVTOPTB8:0 "それはただの自然現象だ。"
  flavor_ayu.EVTNAME9:0 "コンスタンティン・フォールコン"
- flavor_ayu.EVTDESC9:1 "The Greek adventurer and merchant Constantine Phaulkon, who became first counselor to King Narai of Ayutthaya, came to Siam in 1675 after working for England's East India Company. He worked at the court of King Narai as a translator as he was fluent in Thai, English, French, Portuguese, and Malay. Not long after, Phaulkon became a counselor of the king. Phaulkon rose to become highly influential at the Siamese court of king Narai. The French called Phaukon 'Monsieur Constance' as he had engineered a Franco-Siamese rapprochement leading to the exchange of numerous embassies between France and Siam, as well as the dispatch of an expeditionary force by the French in 1687.\nThai members of the royal court envied Phaulkon's closeness to the king and that became his undoing. Pra Phetracha, the foster brother of Narai, used rumors about Phaulkon wanting to use Phra Pui, the heir to the throne, as a puppet and become ruler himself, to stage a coup d'etat, the 1688 Siamese revolution. Phaulkon, his followers and the royal heir were executed on June 5, 1688 in Lopburi. King Narai died several days later, and Phetracha proclaimed himself the new king of Siam."
+ flavor_ayu.EVTDESC9:1 "アユタヤのナーラーイ王の最初の顧問となったギリシャの冒険家で商人のコンスタンティン・フォールコンは、イングランドの東インド会社の勤めを終えて1675年にシャムに来た。彼はタイ語、英語、フランス語、ポルトガル語、マレー語に堪能だったのでナーラーイ王の宮廷で翻訳者として働いていた。しばらくして、フォールコンは王の顧問になった。フォールコンはナーラーイ王のシャム宮廷で非常に影響力を持つようになった。彼はフランスとシャムの間の数多くの大使館員の交流と1687年のフランスによる遠征軍の派遣につながるフランス・シャム間の親善回復を工作したので、フランス人はフォールコンを「ムッシュ・コンスタンス」と呼んだ。\n宮廷のタイの人々はフォールコンと王の親密さを羨ましく思い、それが彼を破滅へと導いた。ナーラーイの乳兄弟であるペートラーチャーはフォールコンが王位の継承者であるプラ・プイを傀儡として利用して支配者になろうとしているという噂を使って、クーデターを企てた。この1688年のシャム革命により、フォールコン、彼の支持者そして王家の継承者は1688年6月5日にロッブリーで処刑された。ナライ王は数日後に死亡し、ペートラーチャーは自らをシャムの新しい王と宣言した。"
  flavor_ayu.EVTOPTA9:0 "この人物は我々の帝国に不可欠だ！"
  flavor_ayu.EVTOPTB9:0 "彼を無視する。"
  flavor_ayu.EVTNAME10:0 "ワット・ラーチャブーラナ"
@@ -4804,10 +4804,10 @@
  flavor_nah.1.t:1 "A New Visitor"
  flavor_nah.1.d:1 "The night smells like fire, like flames dancing in a stake. Some nights feel like days. There is so much light now, the moon is in the center of the sky, everything looks more vivid tonight. It feels like the night itself is alive.\nThere is a man, too. He comes into our village and light follows him. We all know what kind of man he is. Scholars are not strangers to us, but that does not make them less revered. They are tied to the past, to us, to this present and to our future. They heal us, and they also hold precious knowledge. The man approaches the firepit, he starts singing."
  flavor_nah.1.a:0 "The night stays silent."
- flavor_nah.2.t:1 "A Helping Hand"
+ flavor_nah.2.t:1 "救いの手"
  flavor_nah.2.d:1 "[Root.Monarch.GetName] has been taken ill, [Root.Monarch.GetHerHis] voice trembled with fear, [Root.Monarch.GetHerHis] forehead covered in sweat. Our new scholar entered [Root.Monarch.GetHerHis] tent in the morning, and he did not leave until nightfall. He came to us and spoke very clearly - if we do not manage to find the healing herbs [Root.Monarch.GetSheHe] needs in time, our ruler might not make it.\nSome volunteers from our people have offered to collect them."
  flavor_nah.2.a:1 "We must hurry!"
- nah_helping_hand:0 "A Helping Hand"
+ nah_helping_hand:0 "救いの手"
  desc_nah_helping_hand:0 "Our new scholar has taught us his botanical knowledge."
  nah_cautious:0 "Cautious Approach"
  desc_nah_cautious:0 "We have decided to not interfere in the ceremonies."
@@ -4839,7 +4839,7 @@
  flavor_pue.2.a:0 "We shall expel these invaders!"
  pue_popes_rebellion:1 "Po'pay's Rebellion"
  desc_pue_popes_rebellion:0 "The gods fill our soldiers' hearts with strength."
- flavor_pue.3.t:0 "End of the Pueblo Revolt"
+ flavor_pue.3.t:0 "プエブロ反乱の終結"
  flavor_pue.3.d:0 "Through the curse of several sieges and battles, we managed to expel the invaders and recover the rightful control of our lands. Our people have never felt prouder and the gods have blessed us with good weather and healthy crops. However, they have now returned. We recognised their pale faces approaching our villages like old corpses, their crooked smiles pointing towards our leader’s tent.\nBut they have come with a peace offer, a promise of clemency and protection, should we pledge allegiance to their king. [Root.Monarch.GetName] takes a moment before answering."
  flavor_pue.3.a:0 "We shall accept their peace offer."
  flavor_pue.3.b:0 "Their armies have betrayed us!"
@@ -4854,7 +4854,7 @@
  flavor_pue.5.t:0 "Ceremonial Dancers"
  flavor_pue.5.d:1 "There is a small fire in the center of our village tonight. People sit around it and lively chat with their friends and relatives. The air is filled with the smell of recently cooked food and the sky is clear without a single cloud. Nights like these are the ones that feel most like home.\nBut tonight is not just a regular night. Soon after midnight, a group of masked men dance towards the fire and everyone stays silent. They dance, representing stories of times long past."
  flavor_pue.5.a:1 "It is indeed a wonderful night."
- pue_kachinas:0 "Kachinas"
+ pue_kachinas:0 "カチナ"
  desc_pue_kachinas:1 "The spirits protect us."
  pue_end_of_the_revolt:0 "End of the Revolt"
  desc_pue_end_of_the_revolt:0 "The end of this war brings calm to our people."
@@ -4883,13 +4883,13 @@
  sio_feast:0 "Feast of the Dead"
  desc_sio_feast:0 "We have improved our reputation."
  sio_feast_of_the_dead:0 "Celebrated Feast of the Dead"
- flavor_che.1.t:0 "Great Smoky Mountains"
+ flavor_che.1.t:0 "グレート・スモーキー山脈"
  flavor_che.1.d:0 "The mountains contain us. We inhabit their rocky surface, hide in the undergrowth, breath as their animals, hunt their animals; they have always been here, we have not. A group of our youngest men went into the mountains this morning, in the pursuit of an ancient legend our elders used to tell - a magical lake, hidden to the human eye.\nThey seem to have returned victoriously, since their shouts of joy could be heard from every corner of our village. They have, in fact, found a lake: its surface as a scrubbed moon, shining perfectly. They firmly believe that this is the one the legend foretells and their enthusiasm is now shared by the rest of our tribe."
- flavor_che.1.a:1 "Sometimes it is necessary to believe in legends."
- flavor_che.1.b:0 "This is nonsense."
- che_sacred_lake:0 "Sacred Lake"
+ flavor_che.1.a:1 "時には伝説を信じることも必要だ。"
+ flavor_che.1.b:0 "馬鹿馬鹿しい。"
+ che_sacred_lake:0 "聖なる湖"
  desc_che_sacred_lake:0 "The legend of the sacred lake fills our people with religious fervor."
- flavor_che.2.t:1 "Retaliation"
+ flavor_che.2.t:1 "報復"
  flavor_che.2.d:1 "The day dawns red. If the member of a clan kills the member of another, justice must be done and balance must be restored. A man approaches [Root.Monarch.GetName]'s tent, rapid breathing, his hands almost trembling. He states that one of our people has murdered his younger brother, and he demands compensation.\nOur leader nods in silence, and points to the offender's tent. Other members of their clan come soon after with a severe expression; they follow him. This is not about solely revenge, it is about harmony, about life itself. The souls of the dead cannot rest at peace until blood is spilled in exchange of their own. That foreign man raises his arm, a knife tightly held, a scream, someone cries - then silence."
  flavor_che.2.a:0 "This is as it should be."
  che_blood_revenge:0 "Blood Revenge"
@@ -4908,13 +4908,13 @@
  flavor_pow.1.t:0 "First Contact"
  flavor_pow.1.d:0 "The ocean waters are swollen with an incandescent dark blue. An unusual calmness accompanies their violent movements - something has changed, nothing has changed. Seagulls start flying in small groups above us, their screams the only sound that disturbs this distinctive silence. There is something on the horizon.\nA ship. No. Two ships. Three ships. We have never seen ships like these, their shape and size look nothing like ours, or even the ones we have observed in nearby tribes. As they approach our shores, we gather on the beach and realize their faces and skins are also different. They look at us, we look at them."
  flavor_pow.1.a:0 "Everything has changed."
- flavor_pow.2.t:0 "The Virginia Company"
+ flavor_pow.2.t:0 "バージニア会社"
  flavor_pow.2.d:0 "More easterners have landed on our coast. Their initial aggressive attitude has led to some skirmishes between them and some members of our tribe. After a while, they moved north and built a fort to seek protection from further hostilities.\nToday, one of their leaders has approached our village in peace, and with apparent good will. He has given us many presents brought from their distant home, stating that they need our help to survive in this foreign land, his hands almost trembling, stiffly grabbing a small piece of paper. When asked about it, his voice quivered while he offered us the opportunity to play allegiance to their ruler in exchange for protection under the crown, and some knowledge of their form of government."
  flavor_pow.2.a:0 "Considering other options could be useful."
  flavor_pow.2.b:0 "That will never work here."
- flavor_pow.3.t:0 "Anglo-Powhatan Wars"
+ flavor_pow.3.t:0 "アングロ・ポウハタン戦争"
  flavor_pow.3.d:0 "First, they came in peace. They reached our shores with promises of alliance and help, they asked for food, for maps, for guidance in this - for them - uncharted territory. Our generosity knew no limits. We assisted them in everything, we invited them to join our feasts, to meet our rulers. We showed them how to farm the land and which path to follow when going into the wilderness.\nThen, they started to ask for more. They retired to their forts; they did not need us anymore, but they needed our land. [Root.Monarch.GetName] takes a moment to observe the marching of their armies with an unsettling sorrow - the final arrival of what he thought inevitable."
- flavor_pow.3.b:1 "We shall crush them!"
+ flavor_pow.3.b:1 "奴らをつぶさなければ！"
  flavor_pow.3.c:1 "We will need allies to defeat them."
  flavor_pow.4.t:0 "Tribal Trade"
  flavor_pow.4.d:0 "For decades and even centuries, trade has been an essential part of our lives. We have traded within and beyond Tsenacommacah, following east-west trade routes. Shell beads and fur would be given in exchange for copper and red dye, all of them luxury items that could help us prove our high status. Today, one of our allies has sent a merchant to our village. This man has offered to teach us where to find these things ourselves, a testament to the sincerity of the alliance between our peoples."
@@ -5025,5 +5025,5 @@
  totemism_flavor.18.d:0 "The recent war has not only taken a toll on our people, but also on our land. Our crops have been used as supplies for our armies, and part of our soil has even been burnt by the enemy. A great famine has struck our people and they demand solutions."
  totemism_flavor.18.a:0 "This is clearly our council's lack of prevision."
  totemism_flavor.18.b:0 "We must ask the gods for help in this difficult times."
- tot_great_famine:0 "Great Famine"
+ tot_great_famine:0 "大飢饉"
  desc_tot_great_famine:0 "A great famine caused by war has increased the unrest in our capital."
