--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -349,48 +349,48 @@
  desc_steppe_supplies_policy:0 "ステップは過酷な環境であり、食料の確保が困難である。統制された管理政策によって、我々は十分な食料を確保することが出来る。"
  to_the_ground_policy:0 "地平へ"
  desc_to_the_ground_policy:0 "経済を健全に保つことは、我々の部族を良好に維持する最良の手段である。必要な武器や装備をしっかりと提供することで、大地を征服出来るのだ。"
- calming_the_tides_policy:0 "Calming the Tides"
- desc_calming_the_tides_policy:0 "Our close attention to the well-being of our people has paid off delightfully: Our reputation for caring has spread all over the nation and even the most distant shepherd feels grateful for living in our lands."
- esprit_de_corps_policy:0 "Esprit de Corps"
- desc_esprit_de_corps_policy:1 "Our religious strength has helped the people of our prideful nation to feel integrated in a single union. This faith will help us subjugate them by securing their happiness."
+ calming_the_tides_policy:0 "うねりの抑制"
+ desc_calming_the_tides_policy:0 "自国の国民生活に細心の注意を払ってきた。その評判は国中に広まり、遥か遠くにいる羊飼いでさえ、自領での生活に感謝している。"
+ esprit_de_corps_policy:0 "団結心"
+ desc_esprit_de_corps_policy:1 "自国の宗教的な強さは、高慢な国の国民が一つの連合体に統合されていると感じることに一役買っている。この信仰は、彼らの幸福を確保することによって、彼らを服属させるのに役立つ。"
  otto_per_mille:0 "1000分の8税"
- desc_otto_per_mille:0 "Each year, a part of our taxes will be invested in taking good care of our pious government. Thanks to the generosity of our people, our nation will finally achieve the prosperity that it is destined to hold."
+ desc_otto_per_mille:0 "毎年、我々の税金の一部は、敬虔な政府をよく管理するための投資に充てられている。国民の寛大さのおかげで、自国はついに運命的な繁栄を手に入れるだろう。"
  religious_spread_policy:0 "宗教の広がり"
  desc_religious_spread_policy:0 "神の国は、果実を食したために、我々の内にある。食を共にし、川の水を飲んだ。我々の罪深き口にはそれを飲み込んだ罪が残っている。この祝宴を新たな属国と共に祝おうではないか。"
  omnism_policy:0 "オムニズム"
- desc_omnism_policy:0 "A tolerant administration is the key to success. Our nation must be built on acceptance, respect and trust. A merry population is easier to control than an angry one."
+ desc_omnism_policy:0 "寛容な政権こそ成功の鍵である。自国は、受容、尊敬、信頼の上に築かれねばならない。陽気な国民は、怒っている国民よりも御しやすい。"
  ora_et_labora_policy:0 "祈れ、そして働け"
- desc_ora_et_labora_policy:0 "The flesh must be as equally cultivated as the soul. Our monks shall not dedicate their retired lives to devoted prayers, but must exercise their bodies as well. The supply production of our monasteries shall thicken the goods of our nation."
- administration_of_sacred_land_policy:0 "Administration of Sacred Land"
- desc_administration_of_sacred_land_policy:0 "An efficient administration can and should lead to a better exploitation of our natural advantages."
- shared_land_policy:0 "Shared Land"
- desc_shared_land_policy:0 "The growth of our nation shall not rely just in enlarging its extension, but also in the maintenance of our own provinces. Providing them with new buildings will attract new settlers and increase the universal importance of our cities. Soon everyone will know their names."
- disruptive_innovation_policy:0 "Disruptive Innovation"
- desc_disruptive_innovation_policy:1 "Our technological progress has been unparalleled by any other neighboring nation. The improvements in our scientific development are now big enough to guarantee a better use of our great minds and the spreading of their knowledge."
- ancestor_worship_policy:0 "Ancestor Worship"
- desc_ancestor_worship_policy:0 "The cult of the dead is an important part of our culture. Their bodies can rot, but not their memories. Our people have a strong sense of union thanks to these common and essential beliefs."
- steppe_nomad_migrations_policy:0 "Steppe Nomad Migrations"
- desc_steppe_nomad_migrations_policy:1 "As a wandering nation, our people are used to traveling and settling down in new conquered lands. A man cannot choose where he is born, but he can choose where he dies."
- riverine_navy_policy:0 "Riverine Navy"
- desc_riverine_navy_policy:0 "Our horde has been sailing in the rough sea of grass for centuries, now we have transferred that to the water. Let any other enemy ship sail only in blood."
- passport_to_merchants_policy:0 "Passport to Merchants"
- desc_passport_to_merchants_policy:1 "An excellent way of keeping the gold flowing is to ensure that said gold is actually in movement. Our policies to protect trade will help us prevent merchants from choosing another route."
+ desc_ora_et_labora_policy:0 "肉体も魂と同様、洗練せねばならない。我が僧侶は、引退後の生活も献身的な祈りに捧げるだけでなく、同じように肉体も鍛えなければならない。自国の修道院の供給生産は、国の財を厚くする。"
+ administration_of_sacred_land_policy:0 "聖地の管理"
+ desc_administration_of_sacred_land_policy:0 "効率的な管理は、我々の自然の利点をよりよく活用することにつながり、そうあるべきでもある。"
+ shared_land_policy:0 "共有地"
+ desc_shared_land_policy:0 "自国の発展は、その延長線上にあるだけでなく、自国の州の維持にも頼りきりだ。それらの州に新しい建造物を建ててあげることは、新しい移住者を呼び寄せ、自国の都市の普遍的な重要性を高めることになる。すぐに誰もがその名前を知ることになるだろう。"
+ disruptive_innovation_policy:0 "破壊的革新"
+ desc_disruptive_innovation_policy:1 "自国の技術進歩は、他のどの周辺国にも見られないものだ。我々の優れた頭脳をよりうまく活用し、その知識を広めることを保証するのに十分なほど、科学的発展を遂げた。"
+ ancestor_worship_policy:0 "祖先崇拝"
+ desc_ancestor_worship_policy:0 "死者の崇拝は、自国文化にとって重要なものだ。彼らの体は朽ちても、その記憶は腐らない。自国の国民は、このような共通で不可欠な信仰のおかげで、強く結束している。"
+ steppe_nomad_migrations_policy:0 "ステップ遊牧民の移住"
+ desc_steppe_nomad_migrations_policy:1 "流浪の民として、我が民族は旅をして新しい征服地に住み着くことに慣れている。人はどこに生まれるかを選ぶことはできないが、どこで死ぬかを選ぶことはできる。"
+ riverine_navy_policy:0 "河川水軍"
+ desc_riverine_navy_policy:0 "我が遊牧民は何世紀にもわたって草の荒海を泳いできたが、今はそれを水上へと移したのだ。他の敵船には血の中のみを航行させよう。"
+ passport_to_merchants_policy:0 "商人用通行証"
+ desc_passport_to_merchants_policy:1 "金の流れを維持する優れた方法は、金の実際の動きを確認することだ。自国の交易保護政策は、商人が別の道を選択することを防ぐことに一役買うことだろう。"
  faith_advisors_policy:0 "信仰の助言者"
- desc_faith_advisors_policy:0 "Divine guidance shows our ruler the right way. However, while he blesses us with his presence on Earth, he must also be helped by mundane counsel, so that god's blazing advice does not consume his soul."
+ desc_faith_advisors_policy:0 "神の導きは、自国の支配者に正しい道を示してくれる。しかし、神が地球上に存在し我々に祝福を与える一方で、俗世の助言にも助けてもらい、神の燃えたぎる助言が彼の魂を蝕まないようにせねばならない。"
  one_and_true:0 "唯一にして真実"
- desc_one_and_true:0 "The influence of our missionaries has never been so crucial, their reputation among our people has convinced them that the malignant rumors they may hear are not but spiteful whispers."
+ desc_one_and_true:0 "自国の宣教師の影響力がこれほど重要だったことはない。国民の間での彼らの評判は、彼らが耳にするかもしれない悪意ある噂が意地悪な囁きではないことを確信させた。"
  maritime_scribes:0 "海の筆記者"
- desc_maritime_scribes:0 "In the past, we have sent some of our best scholars to our ships in the pursue of a suitable documentation. They have now recorded a good number of chronicles reporting our greatest naval battles and the successful command of our admirals."
+ desc_maritime_scribes:0 "昔、出来の良い記録文書を求めて、最高の学者を船に派遣したこともあった。彼らは今では、最も戦果を上げた海戦や提督たちによる上首尾であった指揮を報告している、数多くの年代記を記録に残した。"
  solidarity_policy:0 "結束"
- desc_solidarity_policy:0 "To share is to love. To receive is... just better. The altruistic reputation of our nation has granted us a prominent position in generous commercial exchanges."
- appeal_to_old_powers_policy:0 "Appeal to the Old Powers"
- desc_appeal_to_old_powers_policy:0 "We have not neglected our relationships with the Old World nations and that has granted us a prestigious notoriety in diplomatic connections."
- indirect_approach_policy:0 "Indirect Approach"
- desc_indirect_approach_policy:0 "Nature is a body, it has eyes and ears, it is everywhere, all the time, impossible to avoid. Everything that is said or done in our nation, we know through it."
- loyalty_to_the_land_policy:0 "Loyalty to the Land"
- desc_loyalty_to_the_land_policy:0 "A bruise in the sky, purple clouds partly lighted by the moon. We feel it like a bruise in our skin. To abandon this land is to abandon ourselves."
- commercial_tribes_policy:0 "Commercial Tribes"
- desc_commercial_tribes_policy:0 "Our commercial network has been notably expanded and now our merchants can cover a significant amount of land. Where there is a will, there is a way."
+ desc_solidarity_policy:0 "共有することとは愛することだ。もらうこととは......本当にさらに良いことだ。自国の利他的との評判は、気前のいい商業交易において重要な位置を占めている。"
+ appeal_to_old_powers_policy:0 "旧勢力への要請"
+ desc_appeal_to_old_powers_policy:0 "旧世界の国々との関係をおろそかにせず、そのおかげで外交関係においては一流の悪名を得ている｡"
+ indirect_approach_policy:0 "間接的接近"
+ desc_indirect_approach_policy:0 "自然は体であり、目や耳があり、どこにでもあり、常にあり、避けることはできない。自国で言われていることや行われていることは全て、それを通じて知ることができる。"
+ loyalty_to_the_land_policy:0 "領地への忠義"
+ desc_loyalty_to_the_land_policy:0 "上空のあざ、月に照らされた紫雲。我々ははそれを肌のあざのようだと感じる。この土地を捨捨てることは、自分自身を捨てることだ。"
+ commercial_tribes_policy:0 "商業部族"
+ desc_commercial_tribes_policy:0 "商業網も格段に広がり、自国の商人はその行動範囲を非常に大きく広がることができるようになった。やる意思があれば、道は開く｡"
  war_horses_policy:0 "軍馬"
  desc_war_on_horses:1 "我々は自身を守るかのように馬を守っている。馬の機動性と耐久性は幾度となく助けてくれ、拡張という野望を際限なく推し進められる理由でもある。万夫が一週間移動に掛かっている行程も、我々は一日で掠奪まで為すのだ！"
  the_best_defense_policy:0 "最高の防衛"
@@ -409,9 +409,11 @@
  desc_fear_tactics_policy:0 "我々は恐怖と力によって近隣諸国の畏敬を得た。内なる恐怖ほど強大な敵はない。"
  psychological_warfare_policy:0 "心理戦"
  desc_psychological_warfare_policy:0 "我々のスパイは敵の陣形や戦術を研究し、それによって騎兵の最適な配置を導き出した。我々の馬の蹄が大地を揺らす音で目覚めることほど恐ろしいことはない。"
- kharash_policy:0 "Kharash"
- desc_kharash_policy:0 "What we do to our enemies is something that none of our subjects wants to experience. With our kharash tactic, we gather prisoners captured in previous battles and make them the vanguard in combat. To avoid that from happening, our vassals kindly prefer to fight on our side."
+ kharash_policy:0 "カーラシュ"
+ desc_kharash_policy:0 "自国が敵に行うことは、属国のいずれもが経験したくないことだ。私たちは、前の戦闘で捕らえた捕虜を集めて、戦闘の先陣を切らせる、カーラシュという戦術をとっている。こうならないように、属国たちは自国の側に立って戦うことを望んでいる。"
  my_word_is_my_bond_policy:0 "言葉は証文"
- desc_my_word_is_my_bond_policy:0 "Our spy network knows the way in and out of our enemy castles, for they have seen them in god's supreme architecture. Some may call it infiltration, we call it vision."
+ desc_my_word_is_my_bond_policy:0 "自国の諜報網は、敵城を出入りする方法を知っている。なぜなら、神の最高の建築物の中にその方法を見たからだ。それを「潜入」と呼ぶ人もいるかもしれないが、我々はそれを「幻視」と呼ぶ｡"
  render_unto_caesar_policy:0 "皇帝のものは皇帝に"
- desc_render_unto_caesar_policy:0 "What god has given you, you must return to him; what we have given to others, they must return to us. Our expansion around the world is a gift of enlightenment."
+ desc_render_unto_caesar_policy:0 "神から与えられしものは神へ返さねばならず、我々が他者へ与えしものは彼らが我々に返さねばならない。自国の世界への拡張は、啓蒙の贈り物だ。"
+ canoe_expertise_policy:0 "カヌー技術"
+ desc_canoe_expertise_policy:0 "我が民族は、昔からカヌーと共に歩んできた長い歴史を持ち、カヌーの操縦法を身につけ、その技術は並外れている。自国の船乗りは、カヌーの技能をさらに大きな船舶の操縦にも生かすことができる。"
