--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -215,7 +215,7 @@
  LANDING_dlc046_TEXT:0 "主な要素：\n- 新しい階級\n- 外交フィードバック\n- テングリの習合主義\n- 遊牧民の新システム\n- 原住民政策\n\n追加要素：\n- 進化した文化転向\n- 諜報の改善"
  LANDING_dlc046_FLAVOR_TEXT:1 "「The Cossacks」は遊牧民と東ヨーロッパに焦点を当てます。この追加要素により、部族の忠誠を保つため、遊牧民として隣国を略奪したり、技術の進歩や、定住した国家を改革する力を得るため、彼らの土地を破壊することが可能になります。\n\nポーランド-リトアニアの有力者やステップのコサックといった、強力な利益を代表する階級によって国内政治は活気づきます。文化や自国に暮らす先住民をより詳細にコントロールしたり、AIの同盟国とより緊密に連携し、その目標を理解する能力により、あなたの内にピョートル大帝を引き出すことができるでしょう。"
  LANDING_dlc055_TEXT:0 "主な要素：\n- 進化した海軍ミッション\n- バルバリア海賊\n- コンドッティエーリ\n- 地図の共有\n\n追加要素：\n- 貿易同盟\n- 新しい諜報行動\n- タイムラインによるリプレイ\n- 防諜活動"
- LANDING_dlc055_FLAVOR_TEXT:1 "「Mare Nostrum」により、Europa Universalis IVの注目は海へと向けられます。この拡張は、近世初期の世界を通じて国家を運営する際に、プレーヤーにさらに多くの海軍および軍事ツールを提供します。\n\nその名前が示すとおり、「Mare Nostrum」は海軍の戦争と交易の支配に関連する新しいシステムを導入します。あなたの艦隊の力は、あなたの国家が集めることができる水兵の数に依存し、船には巡回する海域とミッションとを与えることができます。また、貿易同盟を作成するための新しいオプションや、その他多くの改善点も含まれます。"
+ LANDING_dlc055_FLAVOR_TEXT:1 "「Mare Nostrum」により、Europa Universalis IVの注目は海へと向けられます。この拡張は、近世初期の世界を通じて国家を運営する際に、プレーヤーにさらに多くの海軍および軍事ツールを提供します。\n\nその名前が示すとおり、「Mare Nostrum」は海軍の戦争と交易の支配に関連する新しいシステムを導入します。あなたの艦隊の力は、あなたの国家が集めることができる水兵の数に依存し、船には巡回する海域とミッションとを与えることができます。また、貿易同盟を作成するための新しいオプションや、その他多くの改善点も含まれます。"
  LANDING_dlc060_TEXT:1 "主な要素：\n- 列強\n- 君主の個性と指揮官の特性\n- 配偶者と摂政\n- 従属国に特定の戦時行動を与えることが可能\n- 呪物崇拝国家のカルトをアンロック\n- コプト正教会国家の聖地をアンロック\n\n追加要素：\n- 革命共和国向けの新しい派閥\n- オスマン帝国向けの固有の政体\n- 退位\n- 通貨価値の切り下げ"
  LANDING_dlc060_FLAVOR_TEXT:2 "「Rights of Man」は、列強、君主の個性や配偶者のシステムと確立された国家のための固有の政体等の新機能でEuropa Universalis IVにさらなる深みを加えます。\n\n列強システムは最も発展した国家に対して、彼らよりも弱小な近隣国を脅し、あるいは誘ったりする新しい外交オプションへのアクセスを許可します。発展を継続できなければ、あなたは高い代償を支払って手に入れた力を失うことになるでしょう！"
  LANDING_dlc066_TEXT:0 "主な要素：\n- 歴史区分と黄金時代\n- 新しい中華帝国のシステム\n- 朝貢国\n- 新しい日本の幕府のシステム\n- 満州八旗\n- 外交マクロビルダー"
@@ -675,6 +675,6 @@
  dlc105_reason_europe:0 "「§YEmperor Music Pack§!」は近世ヨーロッパからインスピレーションを得た5つの新しい楽曲を追加します。"
  dlc105_reason_europe_reason:0 "§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
  DLC_dlc106_TOOLTIP_INSTANT:0 "Leviathan"
- DLC_dlc106_TOOLTIP_DELAYED:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n‐ 好感度を稼ぐ\n‐ 開発度の集中\n‐ 中央集権国家\n‐ 拡張された摂政政治\n‐ トーテム信仰\n\n追加機能：\n‐ マンダラ政府改革\n‐ 首都の略奪\n‐ 輸送船の徴集"
- LANDING_dlc106_TEXT:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n‐ 好感度を稼ぐ\n‐ 開発度の集中\n‐ 中央集権国家\n‐ 拡張された摂政政治\n‐ トーテム信仰\n\n追加機能：\n‐ マンダラ政府改革\n‐ 首都の略奪\n‐ 輸送船の徴集"
+ DLC_dlc106_TOOLTIP_DELAYED:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n- 好感度を稼ぐ\n- 開発度の集中\n- 中央集権国家\n- 拡張された摂政政治\n- トーテム信仰\n\n追加機能：\n- マンダラ政府改革\n- 首都の略奪\n- 輸送船の徴集"
+ LANDING_dlc106_TEXT:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n- 好感度を稼ぐ\n- 開発度の集中\n- 中央集権国家\n- 拡張された摂政政治\n- トーテム信仰\n\n追加機能：\n- マンダラ政府改革\n- 首都の略奪\n- 輸送船の徴集"
  LANDING_dlc106_FLAVOR_TEXT:0 "宝石の如く輝く首都を想像してみてください。それは、内陸地から得られた富で改善されましたー従属国から要求した富で彩られたものでもあります。広大な領土を有する帝国の首都ではなく、小さく集中した国家の首都です。Europa Universalis IV： Leviathanでは、それを想像、実現することができます。\n\nLeviathanでは、いくつかの力の中心を持つ、より集中した領域で「高い」プレイを可能にする新しいツールが用意されています。また、摂政制や植民地といった確立したゲーム機能にも多くの変更が加えられています。"
