--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1004,7 +1004,7 @@
  HULLDESC:0 "船がダメージに抵抗する能力です。"
  BUILDPRICE:0 "この建物を建設する余裕がありません、建設には$PRICE$¤がかかります。"
  MYRELIGION:0 "我々は$RELIGION$です。"
- IDEATITLE:0 "国家のアイデアを変更します。"
+ IDEATITLE:0 "国家アイデアを変更します。"
  IDEADESCNEW:0 "$IDEA$のアイデアを採用してよろしいですか？"
  NOIDEA:0 "現在このスロットにアイデアが選択されていません。"
  NOTECH_MORE_ADVANCED:0 "我々の政府レベルが§Y$NEWLEVEL$§Wに達すると新しいスロットが開きます。我々の現在のレベルは§Y$LEVEL$§Wです。"
@@ -1031,16 +1031,16 @@
  INUNIONUS:0 "我が国との同君連合に参加しています。"
  ROYALMARRIAGEWE:0 "我が国は王室間の婚姻をしています。"
  LEADVASSALWE:0 "我が国の属国です。"
- OURVASSAL:0 "我が国は属国です。"
+ OURVASSAL:0 "彼の国の属国です。"
  LEADMARCHWE:0 "我が国の辺境伯です。"
- OURMARCH:0 "我が国は彼の国の辺境伯です。"
- WEGUARANTEED:0 "我々によって独立を保障されています。"
+ OURMARCH:0 "彼の国の辺境伯です。"
+ WEGUARANTEED:0 "彼らの独立を保障しています。"
  THEYGUARANTING:0 "我が国の独立を保障しています。"
  WEWARNING:0 "我が国から警告を受けています。"
  THEYWARNINGUS:0 "我が国に警告しています。"
  NEUTRAL:0 "我が国は彼の国に中立です。"
  RELATION:0 "現在の関係：$RELATION$"
- MARREQTITLE:0 "王室間の婚姻"
+ MARREQTITLE:0 "王室間の婚姻を結ぶ"
  MARREQDESC:0 "$ACTOR$の君主が、我々の主権君主の家族との王室間の婚姻を希望している。これにより両国はより緊密になることだろう。"
  ASKMARCHDESC:0 "属国の$ACTOR$が、辺境伯に指定されることを望んでいます。辺境伯として、彼らは我々にいかなる税も払うことはありませんし、我々は彼らを併合することはできませんが、彼らは以下のボーナスを得るでしょう："
  LEGITI_IMPACT:0 "彼らの威信と正統性が劣っているため、取り決めに調印すると、我々の正統性は$VAL$されるでしょう。"
@@ -1048,14 +1048,14 @@
  MARACCEPTDESC:0 "$ACTOR$は我々の提案を受け入れました。"
  MARREFUSEBUTTON:0 "何てことだ！"
  MARACCEPTBUTTON:0 "素晴らしい！"
- MARNEWDESC:0 "あなたは$COUNTRY$との王室間の婚姻を要求しますか？これは2つの王国の接近をもたらすでしょう。"
+ MARNEWDESC:0 "あなたは$COUNTRY$との王室間の婚姻を要求しますか？これは両王国の接近をもたらすでしょう。"
  PEACEOFFERDESC:0 "我々は$COUNTRY$からの和平提案を受け取っています。彼らは以下の条件を提案しています："
  PO_WELEAD:0 "我々は全同盟者を代表して交渉にあたり、"
  PO_WENOTLEAD:0 "§Y我々は単に自分自身のために交渉しています§W"
- PO_THEYLEAD:0 "彼らは全同盟者を代表して交渉にあたっている。"
+ PO_THEYLEAD:0 "彼らは全同盟者を代表して交渉にあたっています。"
  PO_THEYNOTLEAD:0 "、そして彼らは単に§Y彼ら自身のために交渉しています。§W"
  PEACEBETTER:0 "\n（国民は我々がこの和平条約を受諾することを期待しており、拒否した場合には国内は大きな混乱に陥ると予想されます。）"
- RMTITLE:0 "王室間の婚姻"
+ RMTITLE:0 "王室間の婚姻を結ぶ"
  ENROUTE:0 "最近外交官を派遣したので、§Y$DATE$§!までは別の者を派遣できません。"
  SPY_COOLDOWN:0 "諜報員が最近、彼の国で発見されたので、§Y$DATE$§!までは別の者を派遣できません。"
  SUBJECT:0 "我々は従属国です。それは我々次第ではありません。"
@@ -1085,8 +1085,8 @@
  BREAKOFFERSUPPORTINDEPENDENCEDESC:0 "$COUNTRY$との支援の盟約を取り消します。彼らが宗主国に宣戦布告した場合、もはや我々の支援を求めて参戦要請することはできなくなります。"
  OFFERSUPPORTINDEPENDENCE:0 "国が我々の支援の提案を受け入れた場合、彼らが独立を宣言すると我々は彼らを支援して参戦します。"
  ASKSUPPORTINDEPENDENCE:0 "国が我々の支援の要求を受け入れた場合、我々が独立を宣言すると彼らは我々を支援して参戦します。"
- ALLIANCETITLE:0 "同盟を提案"
- CANCELALIANCETITLE:0 "同盟を破棄"
+ ALLIANCETITLE:0 "同盟を申し出る"
+ CANCELALIANCETITLE:0 "同盟を破棄する"
  ALLIANCENEWDESC:0 "$COUNTRY$に同盟を提案しますか？そうすることで、我々は戦争の際にはお互いを助けることを義務付けられます。"
  BREAKALLIANCENEWDESC:0 "$COUNTRY$との同盟を破棄しますか？これを行うと二国間に停戦期間が発生し、外交関係に悪影響を及ぼします。"
  ALLIANCEREQDESC:0 "$ACTOR$が我々に同盟締結を申し出ています。これを行うと戦争時に相互に支援の約束をすることになります。"
@@ -1102,13 +1102,13 @@
  CANCELMARCHNOSTABCOSTDESC:0 "$WHO$は再び通常の属国となります。これは$WHO$とあなたとの関係を深刻に傷つけるでしょう。"
  ASKFORMARCHDESC:0 "宗主国に対し、属国になる代わりに辺境伯になることを申し出ます。"
  ASKFORMARCHNEWDESC:0 "$OVERLORD$に対し、彼らの辺境伯になる申し出を行いますか？"
- DESIGNATEMARCHTITLE:0 "辺境伯に指定"
- CANCELMARCHTITLE:0 "辺境伯を取り消す"
+ DESIGNATEMARCHTITLE:0 "辺境伯に任ずる"
+ CANCELMARCHTITLE:0 "辺境伯を廃止する"
  ASKFORMARCHTITLE:1 "辺境伯となることを要請"
- EMBARGOTITLE:0 "禁輸の発布"
- REVOKEEMBARGOTITLE:0 "禁輸の取り消し"
+ EMBARGOTITLE:0 "禁輸を発布する"
+ REVOKEEMBARGOTITLE:0 "禁輸を取り消す"
  REVOKEEMBARGONEWDESC:0 "$COUNTRY$に対する禁輸措置を取り消しますか？"
- VASSALTITLE:0 "属国化の提案"
+ VASSALTITLE:0 "属国化を提案する"
  VASSALNEWDESC:0 "$COUNTRY$に我々の属国となることを要請しますか？"
  PROTECTORATETITLE:0 "保護国を設立"
  ASK_PROTECTORATE:0 "保護国化の要請"
@@ -1121,15 +1121,15 @@
  VASSALREQDESC:0 "$COUNTRY$は、彼らの属国になることを求めています。受け入れることによって、我々は彼らの保護下にあるとみなされます。その代わり、我々は収入の50%を彼らに支払う必要があり、我々は彼らとしか同盟を結べなくなります。"
  PROTECTORATEREQDESC:0 "$COUNTRY$は、彼らの保護国になることを求めています。受け入れることによって、我々は彼らの保護下にあるとみなされ、我々の技術の進歩の助けとなります。その代わり、我々は交易力の50%を彼らに与える必要があり、我々は彼らとしか同盟を結べなくなります。"
  ASK_PROTECTORATEREQDESC:0 "$COUNTRY$は、我々の保護国になることを求めています。受け入れることによって、彼らは我々の保護下にあるとみなされ、それは彼らの技術の進歩の助けとなるでしょう。その代わり、彼らは交易力の50%を我々に与える必要があり、彼らは我々としか同盟を結べなくなります。"
- VASSALREQTITLE:0 "属国化の提案"
+ VASSALREQTITLE:0 "属国化を提案する"
  VASSALINVALID:0 "従属の提案を行うには、1)軍事同盟を締結している。2)外交関係が少なくとも190ある。3)対象国が平和でなければなりません。"
  CANCELVASSALDESC:0 "彼らとの属国状態を取り消す"
  CANCELPROTECTORATE:0 "保護国を取り消す"
  CANCELPROTECTORATETITLE:0 "保護国を取り消す"
  CANCELPROTECTORATEDESC:0 "我が国の保護国協定を取り消す"
  BREAKVASSALDESC:0 "現在の宗主国との属国状態を破棄"
- CANCELVASSALTITLE:0 "属国化を破棄"
- BREAKVASSALTITLE:0 "属国化を破棄"
+ CANCELVASSALTITLE:0 "属国化を破棄する"
+ BREAKVASSALTITLE:0 "属国化を破棄する"
  STABHIT_FROM_TRUCE:0 "停戦を破棄"
  STABHIT_FROM_FREE_CITY:0 "自由都市である"
  STABHIT_FROM_GREAT_RELATION:0 "偉大な関係"
@@ -2246,7 +2246,7 @@
  OFFERCONDOTTIERI_REQDES1:0 "$ACTOR|Y$は我々に対し、陸上部隊の貸し出しを提案しています\n$ARMY|Y$$UNITDESC$\n推定コストは毎月§Y$PRICE$§!¤です。\n我々は最初の$MONTHS$ヶ月分、\n$UPFRONT_PRICE|Y$¤を先払いで支払わなくてはなりません。"
  OFFERCONDOTTIERI_REQDES2:0 "この軍隊は$LEADERDESC$が指揮しています。"
  OFFERCONDOTTIERI_REQDES3:0 "受け入れますか？"
- OFFERCONDOTTIERITITLE:0 "コンドッティエーリの提案"
+ OFFERCONDOTTIERITITLE:0 "コンドッティエーリを申し出る"
  OFFERCONDOTTIERI_OFFDESC:0 "$RECIPIENT|Y$に我々から$ARMY|Y$を毎月合計§Y$PRICE$§!¤で雇用する機会を提供します。彼らは最初の$MONTHS$ヶ月分、$UPFRONT_PRICE|Y$¤を先払いで支払わなくてはなりません。"
  OFFERCONDOTTIERI_ATWAR:0 "あなたが戦争中の間は軍隊を貸し出すことはできません。"
  OFFERCONDOTTIERI_NONE:0 "貸し出せる軍隊はありません。"
@@ -2254,8 +2254,8 @@
  OFFERCONDOTTIERI_MONTHLY_COST:0 "月間コスト"
  OFFERCONDOTTIERI_PERCENTAGE:0 "維持費"
  CONDOTTIERI_NUM_AVAILABLE:0 "貸出中のユニット："
- REVOKECONDOTTIERITITLE:0 "コンドッティエーリの取り消し"
- CANCELCONDOTTIERITITLE:0 "コンドッティエーリのキャンセル"
+ REVOKECONDOTTIERITITLE:0 "コンドッティエーリを取り消す"
+ CANCELCONDOTTIERITITLE:0 "コンドッティエーリを中止する"
  REVOKECONDOTTIERI_REQDES:0 "$COUNTRY|Y$への$ARMY|Y$の貸し出しを中止しますか？"
  CANCELCONDOTTIERI_REQDES:0 "$COUNTRY|Y$から$ARMY|Y$の借り受けを中止しますか？"
  CONDOTTIERI:0 "コンドッティエーリ"
@@ -2421,7 +2421,7 @@
  DOMESTIC_CREATE_VASSALLS:0 "属国を作成"
  DOMESTIC_CREATE_SUBJECTS:0 "従属国を作成"
  DOMESTIC_FORM_OF_GOV:0 "政府の形態："
- DOMESTIC_IDEAS:0 "ナショナルアイデア："
+ DOMESTIC_IDEAS:0 "国家アイデア："
  DOMESTIC_POLICIES:0 "国内政策："
  DOMESTIC_EXPLORATION:0 "探検"
  DOMESTIC_NAVAL:0 "海軍の"
@@ -3861,7 +3861,7 @@
  FE_SPREAD1:0 "陸の州の広がり"
  FE_SPREAD2:0 "海の州の広がり"
  FE_OVERRUN:0 "限度を超えた勝利した部隊を別けます。"
- LEDGER_STRUCTURE_BUILDING_OVERVIEW:0 "建物"
+ LEDGER_STRUCTURE_BUILDING_OVERVIEW:0 "建造物"
  LEDGER_REVOLTRISK:0 "不穏度"
  LEDGER_UNREST:0 "不穏度"
  LEDGER_BORDER_PROVINCE:0 "国境州"
@@ -3890,7 +3890,7 @@
  LEDGER_POPULATION_INCREMENTS:0 "成長"
  LEDGER_COST:0 "植民者コスト"
  LEDGER_DAYS:0 "日々"
- LEDGER_NATIVE_SIZE:0 "原住民の数"
+ LEDGER_NATIVE_SIZE:0 "原住民の規模"
  LEDGER_AGGRESSIVENESS:0 "攻撃性"
  LEDGER_FEROCITY:0 "獰猛性"
  LEDGER_LEADER_TITLE:0 "軍指揮官"
@@ -3911,9 +3911,9 @@
  LEDGER_MANEUVER:0 "機動"
  LEDGER_SEIGE:0 "包囲"
  LEDGER_MERCS:0 "傭兵"
- LEDGER_IN_BATTLE:0 "戦闘中"
+ LEDGER_IN_BATTLE:0 "戦闘にて"
  LEDGER_BY_ATTRITION:0 "損耗により"
- LEDGER_CAPTURED:0 "占領済"
+ LEDGER_CAPTURED:0 "拿捕"
  CAM:1 "中央アメリカ"
  DNZ:0 "ダンツィヒ"
  ETR:0 "エトルリア"
@@ -6070,9 +6070,9 @@
  CURRENTLY_VOTING_FOR:0 "我々は現在、以下の国を支持しています："
  NO_OVERSEAS_PRODINCOME:0 "海外州では生産収入の代わりに、すべてが関税収入です。"
  counter_reformation:0 "対抗宗教改革"
- desc_counter_reformation:0 "我々は、カトリック信仰と教皇聖下を守る対抗宗教改革を受け入れています。（もしこれまでに「§Y世界教会主義§W」または「§Y自由、平等、博愛§W」のナショナルアイデアを選択している場合、このボーナスを失うでしょう）"
+ desc_counter_reformation:0 "我々は、カトリック信仰と教皇聖下を守る対抗宗教改革を受け入れています。（もしこれまでに国家アイデア「§Y世界教会主義§W」または「§Y自由、平等、博愛§W」を選択している場合、このボーナスを失うでしょう）"
  join_the_counter_reformation_title:0 "対抗宗教改革の受け入れ"
- join_the_counter_reformation_desc:0 "教皇聖下は、プロテスタント運動に対抗する力強い努力を求めています。新たに創設されたイエズス会の助けを借りて、我々は汚らわしい異端を根絶し、消滅させるべきなのです。より多くのより効果的な宣教師は別として、プロテスタントと改革派の信仰が、我々の領土に広がることはより困難なものとなるでしょう。（もしこれまでに「§Y世界教会主義§W」または「§Y自由、平等、博愛§W」のナショナルアイデアを選択している場合、このボーナスを失うでしょう）"
+ join_the_counter_reformation_desc:0 "教皇聖下は、プロテスタント運動に対抗する力強い努力を求めています。新たに創設されたイエズス会の助けを借りて、我々は汚らわしい異端を根絶し、消滅させるべきなのです。より多くのより効果的な宣教師は別として、プロテスタントと改革派の信仰が、我々の領土に広がることはより困難なものとなるでしょう。（もしこれまでに国家アイデア「§Y世界教会主義§W」または「§Y自由、平等、博愛§W」を選択している場合、このボーナスを失うでしょう）"
  ENABLED_FOR_LESS_THAN:0 "の宗教は右記未満に有効："
  ENABLED_FOR_AT_LEAST:0 "の宗教は右記以上に有効："
  halberd_infantry:0 "ハルバード歩兵"
@@ -6726,7 +6726,7 @@
  TRADE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$交易戦争"
  BAN_WAR_NAME:0 "$ORDER$神聖ローマ帝国の$PROVINCE$再生"
  CONFORMANCE_WAR_NAME:0 "$ORDER$神聖ローマ・$SECOND$宗教統一戦争"
- PUNITIVE_WAR_NAME:0 "$ORDER$$FIRST$の$SECOND$懲罰戦争"
+ PUNITIVE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$懲罰戦争"
  PRIMITIVE_WAR_NAME:0 "$ORDER$$FIRST$の$SECOND_NAME$征服"
  HUMILIATE_WAR_NAME:0 "$ORDER$$FIRST$による$SECOND_NAME$の屈辱"
  CONQUEST_WAR_NAME:0 "$ORDER$$FIRST$の$PROVINCE$征服"
@@ -7371,7 +7371,7 @@
  desc_the_last_joust:0 "騎士はまだしばらく私たちの軍の一部として残っているかもしれないが、彼らが長年にわたって支持してきた騎士道の伝統はすでに絶滅している。"
  NOCLAIMLESSER:0 "あなたは同君連合の下位国なので、王位を請求することはできません。"
  florentine_school:0 "フィレンツェの学派を支援"
- desc_florentine_school:0 "フィレンツェの学派は、ドナテッロ、ミケランジェロ、ブルネレスキのような芸術家の作品から生まれた、おそらく自然主義の様式とその壁画のために最も有名なイタリアの美術学派であった。$COUNTRY$はこれらの芸術家を支援しており、世界はそれを知っている。"
+ desc_florentine_school:1 "フィレンツェの学派は、ドナテッロ、ミケランジェロ、ブルネレスキのような芸術家の作品から生まれた、おそらく自然主義の様式とその壁画のために最も有名なイタリアの美術学派であった。[Root.GetName]はこれらの芸術家を支援しており、世界はそれを知っている。"
  support_florentine_school_title:0 "フィレンツェの学校を支援"
  support_florentine_school_desc:0 "我々は、フィレンツェの学校でイタリアの芸術家を支援する立場にある。国際的な芸術の後援者として認識されることは、我々の宣伝活動を確実に助けるだろう。"
  court_byzantine_refugees_title:0 "ビザンツの難民"
